国名とかの編集

--- a/localisation/_geacps_release_l_english.yml
+++ b/localisation/_geacps_release_l_english.yml
@@ -831,10 +831,6 @@
  fate_of_ANH.1.t:0 "$ANH_ADJ$の運命"
  fate_of_ANH.1.d:0 "我々は旧$ANH_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
  fate_of_ANH.1.0:0 "従順な国家を"
- release_AZA:0 "$AZA_ADJ$の運命"
- fate_of_AZA.1.t:0 "$AZA_ADJ$の運命"
- fate_of_AZA.1.d:0 "我々は旧$AZA_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
- fate_of_AZA.1.0:0 "従順な国家を"
  release_BAL:0 "$BAL_ADJ$の運命"
  fate_of_BAL.1.t:0 "$BAL_ADJ$の運命"
  fate_of_BAL.1.d:0 "我々は旧$BAL_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
@@ -911,10 +907,10 @@
  fate_of_INC.1.t:0 "$INC_ADJ$の運命"
  fate_of_INC.1.d:0 "我々は旧$INC_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
  fate_of_INC.1.0:0 "従順な国家を"
- release_JAK:0 "$JAK_ADJ$の運命"
- fate_of_JAK.1.t:0 "$JAK_ADJ$の運命"
- fate_of_JAK.1.d:0 "我々は旧$JAK_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
- fate_of_JAK.1.0:0 "従順な国家を"
+ release_KAS:0 "$KAS_ADJ$の運命"
+ fate_of_KAS.1.t:0 "$KAS_ADJ$の運命"
+ fate_of_KAS.1.d:0 "我々は旧$KAS_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
+ fate_of_KAS.1.0:0 "従順な国家を"
  release_JIA:0 "$JIA_ADJ$の運命"
  fate_of_JIA.1.t:0 "$JIA_ADJ$の運命"
  fate_of_JIA.1.d:0 "我々は旧$JIA_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
@@ -963,10 +959,6 @@
  fate_of_NIG.1.t:0 "$NIG_ADJ$の運命"
  fate_of_NIG.1.d:0 "我々は旧$NIG_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
  fate_of_NIG.1.0:0 "従順な国家を"
- release_ORI:0 "$ORI_ADJ$の運命"
- fate_of_ORI.1.t:0 "$ORI_ADJ$の運命"
- fate_of_ORI.1.d:0 "我々は旧$ORI_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
- fate_of_ORI.1.0:0 "従順な国家を"
  release_OTT:0 "$OTT_ADJ$の運命"
  fate_of_OTT.1.t:0 "$OTT_ADJ$の運命"
  fate_of_OTT.1.d:0 "我々は旧$OTT_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
@@ -1051,10 +1043,6 @@
  fate_of_TWN.1.t:0 "$TWN_ADJ$の運命"
  fate_of_TWN.1.d:0 "我々は旧$TWN_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
  fate_of_TWN.1.0:0 "従順な国家を"
- release_VPS:0 "$VPS_ADJ$の運命"
- fate_of_VPS.1.t:0 "$VPS_ADJ$の運命"
- fate_of_VPS.1.d:0 "我々は旧$VPS_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
- fate_of_VPS.1.0:0 "従順な国家を"
  release_WTR:0 "$WTR_ADJ$の運命"
  fate_of_WTR.1.t:0 "$WTR_ADJ$の運命"
  fate_of_WTR.1.d:0 "我々は旧$WTR_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
@@ -1063,10 +1051,10 @@
  fate_of_XIK.1.t:0 "$XIK_ADJ$の運命"
  fate_of_XIK.1.d:0 "我々は旧$XIK_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
  fate_of_XIK.1.0:0 "従順な国家を"
- release_YNN:0 "$YNN_ADJ$の運命"
- fate_of_YNN.1.t:0 "$YNN_ADJ$の運命"
- fate_of_YNN.1.d:0 "我々は旧$YNN_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
- fate_of_YNN.1.0:0 "従順な国家を"
+ release_YML:0 "$YML_ADJ$の運命"
+ fate_of_YML.1.t:0 "$YML_ADJ$の運命"
+ fate_of_YML.1.d:0 "我々は旧$YML_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
+ fate_of_YML.1.0:0 "従順な国家を"
  release_ZHI:0 "$ZHI_ADJ$の運命"
  fate_of_ZHI.1.t:0 "$ZHI_ADJ$の運命"
  fate_of_ZHI.1.d:0 "我々は旧$ZHI_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
@@ -1175,10 +1163,10 @@
  fate_of_SRD.1.t:0 "$SRD_ADJ$の運命"
  fate_of_SRD.1.d:0 "我々は旧$SRD_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
  fate_of_SRD.1.0:0 "従順な国家を"
- release_VAL:0 "$VAL_ADJ$の運命"
- fate_of_VAL.1.t:0 "$VAL_ADJ$の運命"
- fate_of_VAL.1.d:0 "我々は旧$VAL_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
- fate_of_VAL.1.0:0 "従順な国家を"
+ release_AOS:0 "$AOS_ADJ$の運命"
+ fate_of_AOS.1.t:0 "$AOS_ADJ$の運命"
+ fate_of_AOS.1.d:0 "我々は旧$AOS_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
+ fate_of_AOS.1.0:0 "従順な国家を"
  release_VAT:0 "$VAT_ADJ$の運命"
  fate_of_VAT.1.t:0 "$VAT_ADJ$の運命"
  fate_of_VAT.1.d:0 "我々は旧$VAT_ADJ$領土を手に入れた。この領土を我々はどのようにすべきだろうか?"
