--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -1,9 +1,13 @@
 ﻿l_english:
 #国家形成
 #アジア
- MOU-ARM_republic:0 "山岳アルメニア共和国"
- MOU-ARM_republic_DEF:0 "山岳アルメニア共和国"
- MOU-ARM_republic_ADJ:0 "山岳アルメニア"
+ IRAN_empire:0 "イラン帝国"
+ IRAN_empire_DEF:0 "イラン帝国"
+ IRAN_empire_ADJ:0 "イラン"
+ 
+ MOUNTAIN-ARMENIA_republic:0 "山岳アルメニア共和国"
+ MOUNTAIN-ARMENIA_republic_DEF:0 "山岳アルメニア共和国"
+ MOUNTAIN-ARMENIA_republic_ADJ:0 "山岳アルメニア"
  
  MYANMAR_union:0 "ミャンマー連邦"
  MYANMAR_union_DEF:0 "ミャンマー連邦"
@@ -13,21 +17,13 @@
  MYANMAR_union_republic_DEF:0 "ミャンマー連邦共和国"
  MYANMAR_union_republic_ADJ:0 "ミャンマー"
  
- OMA_imamate:0 "オマーン・イマーム国"
- OMA_imamate_DEF:0 "オマーン・イマーム国"
- OMA_imamate_ADJ:0 "イマーム・オマーン"
+ MUSCATandOMAN_sultanate:0 "マスカット及びオマーン・スルタン国"
+ MUSCATandOMAN_muscat_sultanate_DEF:0 "マスカット及びオマーン・スルタン国"
+ MUSCATandOMAN_muscat_sultanate_ADJ:0 "マスカット・オマーン"
  
- OMA_muscat_sultanate:0 "マスカット・オマーン・スルタン国"
- OMA_muscat_sultanate_DEF:0 "マスカット・オマーン・スルタン国"
- OMA_muscat_sultanate_ADJ:0 "マスカット・オマーン"
- 
- OMA_trucial:0 "オマーン海岸トルーシャル国"
- OMA_trucial_DEF:0 "オマーン海岸トルーシャル国"
- OMA_trucial_ADJ:0 "トルーシャル・オマーン"
- 
- PER_IRAN_empire:0 "イラン帝国"
- PER_IRAN_empire_DEF:0 "イラン帝国"
- PER_IRAN_empire_ADJ:0 "イラン"
+ OMAN-COAST_trucial_state:0 "オマーン海岸トルーシャル国"
+ OMAN-COAST_trucial_state_DEF:0 "オマーン海岸トルーシャル国"
+ OMAN-COAST_trucial_state_ADJ:0 "トルーシャル・オマーン"
  
  TRANSJORDAN_hashemite_kingdom:0 "トランスヨルダン・ハシミテ王国"
  TRANSJORDAN_hashemite_kingdom_DEF:0 "トランスヨルダン・ハシミテ王国"
@@ -50,19 +46,33 @@
  AUS-HUN_empire_DEF:0 "オーストリア諸邦ならびに神聖なるハンガリーのイシュトヴァーン王冠の諸邦"
  AUS-HUN_empire_ADJ:0 "オーストリア＝ハンガリー"
  
- BOS-HRZ:0 "ボスニア・ヘルツェゴヴィナ共和国"
- BOS-HRZ_DEF:0 "ボスニア・ヘルツェゴヴィナ共和国"
+ BOS-HRZ:0 "ボスニア・ヘルツェゴヴィナ"
+ BOS-HRZ_DEF:0 "ボスニア・ヘルツェゴヴィナ"
  BOS-HRZ_ADJ:0 "ボスニア・ヘルツェゴヴィナ"
  
- CZE-SLO_republic:0 "チェコスロバキア共和国"
- CZE-SLO_republic_DEF:0 "チェコスロバキア共和国"
- CZE-SLO_republic_total_socialism:0 "チェコスロバキア社会主義共和国"
- CZE-SLO_republic_total_socialism_DEF:0 "チェコスロバキア社会主義共和国"
- CZE-SLO_republic_ADJ:0 "チェコスロバキア"
+ BOHEMIAandMORAVIA_united_kingdom:0 "ボヘミア及びモラヴィア連合王国"
+ BOHEMIAandMORAVIA_united_kingdom_DEF:0 "ボヘミア及びモラヴィア連合王国"
+ BOHEMIAandMORAVIA_united_kingdom_ADJ:0 "ボヘミア・モラヴィア"
+ 
+ CZECHSLOVAKIA_republic:0 "チェコスロバキア共和国"
+ CZECHSLOVAKIA_republic_DEF:0 "チェコスロバキア共和国"
+ CZECHSLOVAKIA_republic_total_socialism:0 "チェコスロバキア社会主義共和国"
+ CZECHSLOVAKIA_republic_total_socialism_DEF:0 "チェコスロバキア社会主義共和国"
+ CZECHSLOVAKIA_republic_radical_socialism:0 "チェコスロバキア社会主義共和国"
+ CZECHSLOVAKIA_republic_radical_socialism_DEF:0 "チェコスロバキア社会主義共和国"
+ CZECHSLOVAKIA_republic_ADJ:0 "チェコスロバキア"
+ 
+ CZE-SLO_republic:0 "チェコ＝スロバキア共和国"
+ CZE-SLO_republic_DEF:0 "チェコ＝スロバキア共和国"
+ CZE-SLO_republic_total_socialism:0 "チェコ＝スロバキア社会主義共和国"
+ CZE-SLO_republic_total_socialism_DEF:0 "チェコ＝スロバキア社会主義共和国"
+ CZE-SLO_republic_radical_socialism:0 "チェコ＝スロバキア社会主義共和国"
+ CZE-SLO_republic_radical_socialism_DEF:0 "チェコ＝スロバキア社会主義共和国"
+ CZE-SLO_republic_ADJ:0 "チェコ＝スロバキア"
  
  CZEandSLO_federative_republic:0 "チェコ及びスロバキア連邦共和国"
  CZEandSLO_federative_republic_DEF:0 "チェコ及びスロバキア連邦共和国"
- CZEandSLO_federative_republic_ADJ:0 "チェコ及びスロバキア"
+ CZEandSLO_federative_republic_ADJ:0 "チェコ・スロバキア"
  
  ENG-GBR_kingdom:0 "グレートブリテン王国"
  ENG-GBR_kingdom_DEF:0 "グレートブリテン王国"
@@ -84,13 +94,17 @@
  ENG-GBR_republic_DEF:0 "グレートブリテン共和国"
  ENG-GBR_republic_ADJ:0 "イギリス"
  
+ ENG-SCO_republic:0 "イングランド＝スコットランド共和国"
+ ENG-SCO_republic_DEF:0 "イングランド＝スコットランド共和国"
+ ENG-SCO_republic_ADJ:0 "イングランド＝スコットランド"
+ 
+ ENG-WLS_republic:0 "イングランド＝ウェールズ共和国"
+ ENG-WLS_republic_DEF:0 "イングランド＝ウェールズ共和国"
+ ENG-WLS_republic_ADJ:0 "イングランド＝ウェールズ"
+ 
  GER-AUS_republic:0 "ドイツ＝オーストリア共和国"
  GER-AUS_republic_DEF:0 "ドイツ＝オーストリア共和国"
  GER-AUS_republic_ADJ:0 "ドイツ＝オーストリア"
- 
- GRE_provisional_democratic_government:0 "ギリシャ臨時民主政府"
- GRE_provisional_democratic_government_DEF:0 "ギリシャ臨時民主政府"
- GRE_provisional_democratic_government_ADJ:0 "臨時民主政府"
  
  MEK-SCHWERIN_grand_duchy:0 "メクレンブルク＝シュヴェリーン大公国"
  MEK-SCHWERIN_grand_duchy_DEF:0 "メクレンブルク＝シュヴェリーン大公国"
@@ -108,56 +122,55 @@
  TWO-SICILIES_kingdom_DEF:0 "両シチリア王国"
  TWO-SICILIES_kingdom_ADJ:0 "両シチリア"
  
- SER-MNT_kingdom:0 "セルビア・モンテネグロ王国"
- SER-MNT_kingdom_DEF:0 "セルビア・モンテネグロ王国"
- SER-MNT_kingdom_ADJ:0 "セルビア・モンテネグロ"
+ SERandMNT_state_union:0 "セルビア及びモンテネグロ国家連合"
+ SERandMNT_state_union_DEF:0 "セルビア及びモンテネグロ国家連合"
+ SERandMNT_state_union_ADJ:0 "セルビア・モンテネグロ"
  
 #アフリカ
  AFRICA_union:0 "アフリカ連合"
  AFRICA_union_DEF:0 "アフリカ連合"
  AFRICA_union_ADJ:0 "アフリカ"
  
- ETH-ERI_federation:0 "エチオピア・エリトリア連邦"
- ETH-ERI_federation_DEF:0 "エチオピア・エリトリア連邦"
- ETH-ERI_federation_ADJ:0 "エチオピア・エリトリア"
+ ETHandERI_federation:0 "エチオピア及びエリトリア連邦"
+ ETHandERI_federation_DEF:0 "エチオピア及びエリトリア連邦"
+ ETHandERI_federation_ADJ:0 "エチオピア・エリトリア"
  
 #ユーゴスラビア
- BOS_YUG_kingdom:0 "ボスニア南スラブ王国"
- BOS_YUG_kingdom_DEF:0 "ボスニア南スラブ王国"
- BOS_YUG_kingdom_ADJ:0 "ボスニア"
+ BOS_southslab_kingdom:0 "ボスニア南スラブ王国"
+ BOS_southslab_kingdom_DEF:0 "ボスニア南スラブ王国"
  
- CRO_YUG_kingdom:0 "クロアチア南スラブ王国"
- CRO_YUG_kingdom_DEF:0 "クロアチア南スラブ王国"
+ CRO_southslab_kingdom:0 "クロアチア南スラブ王国"
+ CRO_southslab_kingdom_DEF:0 "クロアチア南スラブ王国"
  
- DAL_YUG_kingdom:0 "ダルマチア南スラブ王国"
- DAL_YUG_kingdom_DEF:0 "ダルマチア南スラブ王国"
+ DAL_southslab_kingdom:0 "ダルマチア南スラブ王国"
+ DAL_southslab_kingdom_DEF:0 "ダルマチア南スラブ王国"
  
- HRZ_YUG_kingdom:0 "ヘルツェゴビナ南スラブ王国"
- HRZ_YUG_kingdom_DEF:0 "ヘルツェゴビナ南スラブ王国"
+ HRZ_southslab_kingdom:0 "ヘルツェゴビナ南スラブ王国"
+ HRZ_southslab_kingdom_DEF:0 "ヘルツェゴビナ南スラブ王国"
  
- IST_YUG_kingdom:0 "イストリア南スラブ王国"
- IST_YUG_kingdom_DEF:0 "イストリア南スラブ王国"
+ IST_southslab_kingdom:0 "イストリア南スラブ王国"
+ IST_southslab_kingdom_DEF:0 "イストリア南スラブ王国"
  
- KOS_YUG_kingdom:0 "コソボ南スラブ王国"
- KOS_YUG_kingdom_DEF:0 "コソボ南スラブ王国"
+ KOS_southslab_kingdom:0 "コソボ南スラブ王国"
+ KOS_southslab_kingdom_DEF:0 "コソボ南スラブ王国"
  
- MAC_YUG_kingdom:0 "マケドニア南スラブ王国"
- MAC_YUG_kingdom_DEF:0 "マケドニア南スラブ王国"
+ MAC_southslab_kingdom:0 "マケドニア南スラブ王国"
+ MAC_southslab_kingdom_DEF:0 "マケドニア南スラブ王国"
  
- MNT_YUG_kingdom:0 "モンテネグロ南スラブ王国"
- MNT_YUG_kingdom_DEF:0 "モンテネグロ南スラブ王国"
+ MNT_southslab_kingdom:0 "モンテネグロ南スラブ王国"
+ MNT_southslab_kingdom_DEF:0 "モンテネグロ南スラブ王国"
  
- SLA_YUG_kingdom:0 "スラボニア南スラブ王国"
- SLA_YUG_kingdom_DEF:0 "スラボニア南スラブ王国"
+ SLA_southslab_kingdom:0 "スラボニア南スラブ王国"
+ SLA_southslab_kingdom_DEF:0 "スラボニア南スラブ王国"
  
- SLV_YUG_kingdom:0 "スロベニア南スラブ王国"
- SLV_YUG_kingdom_DEF:0 "スロベニア南スラブ王国"
+ SLV_southslab_kingdom:0 "スロベニア南スラブ王国"
+ SLV_southslab_kingdom_DEF:0 "スロベニア南スラブ王国"
  
- SER_YUG_kingdom:0 "セルビア南スラブ王国"
- SER_YUG_kingdom_DEF:0 "セルビア南スラブ王国"
+ SER_southslab_kingdom:0 "セルビア南スラブ王国"
+ SER_southslab_kingdom_DEF:0 "セルビア南スラブ王国"
  
- VOJ_YUG_kingdom:0 "ヴォイヴォディナ南スラブ王国"
- VOJ_YUG_kingdom_DEF:0 "ヴォイヴォディナ南スラブ王国"
+ VOJ_southslab_kingdom:0 "ヴォイヴォディナ南スラブ王国"
+ VOJ_southslab_kingdom_DEF:0 "ヴォイヴォディナ南スラブ王国"
  
 #無政府国家
  GLR_anarchy:0 "五大湖地域無政府連盟"
@@ -168,10 +181,6 @@
  RATE:0 "レーテ"
  RATE_DEF:0 "レーテ"
  RATE_ADJ:0 "レーテ"
- 
- HYOGIKAI:0 "評議会"
- HYOGIKAI_DEF:0 "評議会"
- HYOGIKAI_ADJ:0 "評議会"
  
  TANACS:0 "タナーチ"
  TANACS_DEF:0 "タナーチ"
