--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -196,10 +196,6 @@
  VIN_DEF:0 "ベトナム"
  VIN_ADJ:0 "ベトナム"
  
- XSM:0 "馬家"
- XSM_DEF:0 "馬家"
- XSM_ADJ:0 "馬家"
- 
  YEM:0 "イエメン"
  YEM_DEF:0 "イエメン"
  YEM_ADJ:0 "イエメン"
@@ -409,9 +405,9 @@
  SER_DEF:0 "セルビア"
  SER_ADJ:0 "セルビア"
  
- SHL:0 "シュレースヴィヒ=ホルシュタイン"
- SHL_DEF:0 "シュレースヴィヒ=ホルシュタイン"
- SHL_ADJ:0 "シュレースヴィヒ=ホルシュタイン"
+ SHL:0 "シュレースヴィヒ"
+ SHL_DEF:0 "シュレースヴィヒ"
+ SHL_ADJ:0 "シュレースヴィヒ"
  
  SLO:0 "スロバキア"
  SLO_DEF:0 "スロバキア"
@@ -816,9 +812,9 @@
  SAM_DEF:0 "サモア"
  SAM_ADJ:0 "サモア"
  
- SOL:0 "ソロモン諸島"
- SOL_DEF:0 "ソロモン諸島"
- SOL_ADJ:0 "ソロモン諸島"
+ SOL:0 "ソロモン"
+ SOL_DEF:0 "ソロモン"
+ SOL_ADJ:0 "ソロモン"
  
  TAH:0 "タヒチ"
  TAH_DEF:0 "タヒチ"
@@ -910,10 +906,6 @@
  INC_DEF:0 "インドシナ"
  INC_ADJ:0 "インドシナ"
  
- JAK:0 "ジャンムー・カシュミール"
- JAK_DEF:0 "ジャンムー・カシュミール"
- JAK_ADJ:0 "ジャンムー・カシュミール"
- 
  JIA:0 "江西"
  JIA_DEF:0 "江西"
  JIA_ADJ:0 "江西"
@@ -925,6 +917,10 @@
  JOH:0 "ジョホール"
  JOH_DEF:0 "ジョホール"
  JOH_ADJ:0 "ジョホール"
+ 
+ KAS:0 "カシミール"
+ KAS_DEF:0 "カシミール"
+ KAS_ADJ:0 "カシミール"
  
  KED:0 "ケダ"
  KED_DEF:0 "ケダ"
@@ -946,10 +942,6 @@
  MCA_DEF:0 "澳門"
  MCA_ADJ:0 "澳門"
  
- MOU:0 "山岳"
- MOU_DEF:0 "山岳"
- MOU_ADJ:0 "山岳"
- 
  MYS:0 "マイソール"
  MYS_DEF:0 "マイソール"
  MYS_ADJ:0 "マイソール"
@@ -961,10 +953,6 @@
  NIG:0 "寧夏"
  NIG_DEF:0 "寧夏"
  NIG_ADJ:0 "寧夏"
- 
- ORI:0 "オリッサ"
- ORI_DEF:0 "オリッサ"
- ORI_ADJ:0 "オリッサ"
  
  OTT:0 "オスマン"
  OTT_DEF:0 "オスマン"
@@ -1058,9 +1046,9 @@
  XIK_DEF:0 "西康"
  XIK_ADJ:0 "西康"
  
- YNN:0 "ヤマロ・ネネツ"
- YNN_DEF:0 "ヤマロ・ネネツ"
- YNN_ADJ:0 "ヤマロ・ネネツ"
+ YML:0 "ヤマリア"
+ YML_DEF:0 "ヤマリア"
+ YML_ADJ:0 "ヤマリア"
  
  ZHI:0 "直隷"
  ZHI_DEF:0 "直隷"
@@ -1071,13 +1059,17 @@
  ZHE_ADJ:0 "浙江"
  
 #ヨーロッパ
+ AOS:0 "アオスタ"
+ AOS_DEF:0 "アオスタ"
+ AOS_ADJ:0 "アオスタ"
+ 
  ADR:0 "アンドラ"
  ADR_DEF:0 "アンドラ"
  ADR_ADJ:0 "アンドラ"
  
- ALA:0 "オーランド諸島"
- ALA_DEF:0 "オーランド諸島"
- ALA_ADJ:0 "オーランド諸島"
+ ALA:0 "オーランド"
+ ALA_DEF:0 "オーランド"
+ ALA_ADJ:0 "オーランド"
  
  BAI:0 "バイカル"
  BAI_DEF:0 "バイカル"
@@ -1095,9 +1087,9 @@
  FLN_DEF:0 "フランドル"
  FLN_ADJ:0 "フランドル"
  
- FRO:0 "フェロー諸島"
- FRO_DEF:0 "フェロー諸島"
- FRO_ADJ:0 "フェロー諸島"
+ FRO:0 "フェロー"
+ FRO_DEF:0 "フェロー"
+ FRO_ADJ:0 "フェロー"
  
  GIB:0 "ジブラルタル"
  GIB_DEF:0 "ジブラルタル"
@@ -1127,9 +1119,9 @@
  MCO_DEF:0 "モナコ"
  MCO_ADJ:0 "モナコ"
  
- MNN:0 "マン島"
- MNN_DEF:0 "マン島"
- MNN_ADJ:0 "マン島"
+ MNN:0 "マン"
+ MNN_DEF:0 "マン"
+ MNN_ADJ:0 "マン"
  
  MRV:0 "モラヴィア"
  MRV_DEF:0 "モラヴィア"
@@ -1171,10 +1163,6 @@
  SRD_DEF:0 "サルディーニャ"
  SRD_ADJ:0 "サルディーニャ"
  
- VAL:0 "ヴァッレ・ダオスタ"
- VAL_DEF:0 "ヴァッレ・ダオスタ"
- VAL_ADJ:0 "ヴァッレ・ダオスタ"
- 
  VAT:0 "バチカン"
  VAT_DEF:0 "バチカン"
  VAT_ADJ:0 "バチカン"
@@ -1192,6 +1180,10 @@
  WLL_ADJ:0 "ワロン"
  
 #アフリカ
+ AMB:0 "アンバゾニア"
+ AMB_DEF:0 "アンバゾニア"
+ AMB_ADJ:0 "アンバゾニア"
+ 
  COM:0 "コモロ"
  COM_DEF:0 "コモロ"
  COM_ADJ:0 "コモロ"
@@ -1224,9 +1216,9 @@
  MYT_DEF:0 "マヨット"
  MYT_ADJ:0 "マヨット"
  
- R-U:0 "ルアンダ・ウルンディ"
- R-U_DEF:0 "ルアンダ・ウルンディ"
- R-U_ADJ:0 "ルアンダ・ウルンディ"
+ R-U:0 "ルアンダ＝ウルンディ"
+ R-U_DEF:0 "ルアンダ＝ウルンディ"
+ R-U_ADJ:0 "ルアンダ＝ウルンディ"
  
  REU:0 "レユニオン"
  REU_DEF:0 "レユニオン"
@@ -1285,9 +1277,9 @@
  BRB_DEF:0 "バルバドス"
  BRB_ADJ:0 "バルバドス"
  
- CYM:0 "ケイマン島"
- CYM_DEF:0 "ケイマン島"
- CYM_ADJ:0 "ケイマン島"
+ CYM:0 "ケイマン"
+ CYM_DEF:0 "ケイマン"
+ CYM_ADJ:0 "ケイマン"
  
  DMA:0 "ドミニカ"
  DMA_DEF:0 "ドミニカ"
@@ -1305,13 +1297,13 @@
  GRL_DEF:0 "グリーンランド"
  GRL_ADJ:0 "グリーンランド"
  
- LEW:0 "リーワード諸島"
- LEW_DEF:0 "リーワード諸島"
- LEW_ADJ:0 "リーワード諸島"
+ LEW:0 "リーワード"
+ LEW_DEF:0 "リーワード"
+ LEW_ADJ:0 "リーワード"
  
- MSR:0 "モンセトラ"
- MSR_DEF:0 "モンセトラ"
- MSR_ADJ:0 "モンセトラ"
+ MSR:0 "モントセラト"
+ MSR_DEF:0 "モントセラト"
+ MSR_ADJ:0 "モントセラト"
  
  MTQ:0 "マルティニーク"
  MTQ_DEF:0 "マルティニーク"
@@ -1337,54 +1329,54 @@
  SLC_DEF:0 "セントルシア"
  SLC_ADJ:0 "セントルシア"
  
- SPM:0 "サンピエール島及びミクロン島"
- SPM_DEF:0 "サンピエール島及びミクロン島"
- SPM_ADJ:0 "サンピエール島及びミクロン島"
+ SPM:0 "サンピエール及びミクロン"
+ SPM_DEF:0 "サンピエール及びミクロン"
+ SPM_ADJ:0 "サンピエール及びミクロン"
  
- SVG:0 "セントビンセント及びグレナディーン諸島"
- SVG_DEF:0 "セントビンセント及びグレナディーン諸島"
- SVG_ADJ:0 "セントビンセント及びグレナディーン諸島"
+ SVG:0 "セントビンセント及びグレナディーン"
+ SVG_DEF:0 "セントビンセント及びグレナディーン"
+ SVG_ADJ:0 "セントビンセント及びグレナディーン"
  
  TCA:0 "タークス・カイコス"
  TCA_DEF:0 "タークス・カイコス"
  TCA_ADJ:0 "タークス・カイコス"
  
- VIR:0 "ヴァージン諸島"
- VIR_DEF:0 "ヴァージン諸島"
- VIR_ADJ:0 "ヴァージン諸島"
+ VIR:0 "ヴァージン"
+ VIR_DEF:0 "ヴァージン"
+ VIR_ADJ:0 "ヴァージン"
  
- WIW:0 "ウィンドワード諸島"
- WIW_DEF:0 "ウィンドワード諸島"
- WIW_ADJ:0 "ウィンドワード諸島"
+ WIW:0 "ウィンドワード"
+ WIW_DEF:0 "ウィンドワード"
+ WIW_ADJ:0 "ウィンドワード"
  
 #大洋州
- CHR:0 "クリスマス島"
- CHR_DEF:0 "クリスマス島"
- CHR_ADJ:0 "クリスマス島"
+ CHR:0 "クリスマス"
+ CHR_DEF:0 "クリスマス"
+ CHR_ADJ:0 "クリスマス"
  
- COC:0 "ココス諸島"
- COC_DEF:0 "ココス諸島"
- COC_ADJ:0 "ココス諸島"
+ COC:0 "ココス"
+ COC_DEF:0 "ココス"
+ COC_ADJ:0 "ココス"
  
- COK:0 "クック諸島"
- COK_DEF:0 "クック諸島"
- COK_ADJ:0 "クック諸島"
+ COK:0 "クック"
+ COK_DEF:0 "クック"
+ COK_ADJ:0 "クック"
  
  KIR:0 "キリバス"
  KIR_DEF:0 "キリバス"
  KIR_ADJ:0 "キリバス"
  
- MHL:0 "マーシャル諸島"
- MHL_DEF:0 "マーシャル諸島"
- MHL_ADJ:0 "マーシャル諸島"
+ MHL:0 "マーシャル"
+ MHL_DEF:0 "マーシャル"
+ MHL_ADJ:0 "マーシャル"
  
  NCL:0 "ニューカレドニア"
  NCL_DEF:0 "ニューカレドニア"
  NCL_ADJ:0 "ニューカレドニア"
  
- NFK:0 "ノーフォーク島"
- NFK_DEF:0 "ノーフォーク島"
- NFK_ADJ:0 "ノーフォーク島"
+ NFK:0 "ノーフォーク"
+ NFK_DEF:0 "ノーフォーク"
+ NFK_ADJ:0 "ノーフォーク"
  
  NIU:0 "ニウエ"
  NIU_DEF:0 "ニウエ"
@@ -1431,13 +1423,9 @@
  CAL_DEF:0 "カリフォルニア"
  CAL_ADJ:0 "カリフォルニア"
  
- CLU:0 "ワシントン・コロンビア"
- CLU_DEF:0 "ワシントン・コロンビア"
- CLU_ADJ:0 "ワシントン・コロンビア"
- 
- GLR:0 "五大湖地域"
- GLR_DEF:0 "五大湖地域"
- GLR_ADJ:0 "五大湖地域"
+ CLU:0 "コロンビア"
+ CLU_DEF:0 "コロンビア"
+ CLU_ADJ:0 "コロンビア"
  
  NEL:0 "ニューイングランド"
  NEL_DEF:0 "ニューイングランド"
