--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -117,10 +117,10 @@
  KOR_empire_DEF:0 "大韓帝国"
  KOR_republic:0 "大韓民国"
  KOR_republic_DEF:0 "大韓民国"
- KOR_republic_total_socialism:0 "朝鮮民主主義人民共和国"
- KOR_republic_total_socialism_DEF:0 "朝鮮民主主義人民共和国"
- KOR_republic_radical_socialism:0 "朝鮮民主主義人民共和国"
- KOR_republic_radical_socialism_DEF:0 "朝鮮民主主義人民共和国"
+ KOR_republic_total_socialism:0 "大韓人民共和国"
+ KOR_republic_total_socialism_DEF:0 "大韓人民共和国"
+ KOR_republic_radical_socialism:0 "大韓人民共和国"
+ KOR_republic_radical_socialism_DEF:0 "大韓人民共和国"
  
  KUR_kingdom:0 "クルディスタン王国"
  KUR_kingdom_DEF:0 "クルディスタン王国"
@@ -155,8 +155,8 @@
  MAN_state:0 "満州国"
  MAN_state_DEF:0 "満州国"
  
- MEN_autonomous_federation_government:0 "蒙古自治邦政府"
- MEN_autonomous_federation_government_DEF:0 "蒙古自治邦政府"
+ MEN_autonomous_federation:0 "蒙疆自治邦"
+ MEN_autonomous_federation_DEF:0 "蒙疆自治邦"
  
  MLD_sultanate:0 "モルディブ・スルタン国"
  MLD_sultanate_DEF:0 "モルディブ・スルタン国"
@@ -179,6 +179,8 @@
  
  OMA_empire:0 "オマーン帝国"
  OMA_empire_DEF:0 "オマーン帝国"
+ OMA_imamate:0 "オマーン・イマーム国"
+ OMA_imamate_DEF:0 "オマーン・イマーム国"
  OMA_sultanate:0 "オマーン・スルタン国"
  OMA_sultanate_DEF:0 "オマーン・スルタン国"
  
@@ -210,8 +212,8 @@
  
  SIK_warlord:0 "新疆軍閥"
  SIK_warlord_DEF:0 "新疆軍閥"
- SIK_ma_warlord:0 "新疆軍閥"
- SIK_ma_warlord_DEF:0 "新疆軍閥"
+ SIK_ma_warlord:0 "新疆馬軍閥"
+ SIK_ma_warlord_DEF:0 "新疆馬軍閥"
  
  SRL_republic:0 "スリランカ共和国"
  SRL_republic_DEF:0 "スリランカ共和国"
@@ -262,9 +264,6 @@
  VIN_republic_radical_socialism_DEF:0 "ベトナム社会主義共和国"
  VIN_state:0 "ベトナム国"
  VIN_state_DEF:0 "ベトナム国"
- 
- XSM_warlord:0 "馬家軍閥"
- XSM_warlord_DEF:0 "馬家軍閥"
  
  YEM_arab_republic:0 "イエメン・アラブ共和国"
  YEM_arab_republic_DEF:0 "イエメン・アラブ共和国"
@@ -425,6 +424,8 @@
  
  GRE_kingdom:0 "ギリシャ王国"
  GRE_kingdom_DEF:0 "ギリシャ王国"
+ GRE_provisional_democratic_government:0 "ギリシャ臨時民主政府"
+ GRE_provisional_democratic_government_DEF:0 "ギリシャ臨時民主政府"
  GRE_republic:0 "ギリシャ共和国"
  GRE_republic_DEF:0 "ギリシャ共和国"
  GRE_republic_total_socialism:0 "ギリシャ民主共和国"
@@ -500,14 +501,16 @@
  MAC_republic_radical_socialism:0 "マケドニア社会主義共和国"
  MAC_republic_radical_socialism_DEF:0 "マケドニア社会主義共和国"
  
- MEK-SCHWERIN_grand_duchy:0 "メクレンブルク＝シュヴェリーン大公国"
- MEK-SCHWERIN_grand_duchy_DEF:0 "メクレンブルク＝シュヴェリーン大公国"
+ MEK_grand_duchy:0 "メクレンブルク大公国"
+ MEK_grand_duchy_DEF:0 "メクレンブルク大公国"
  
  MLT_republic:0 "マルタ共和国"
  MLT_republic_DEF:0 "マルタ共和国"
  
  MOL_democratic_republic:0 "モルダヴィア民主共和国"
  MOL_democratic_republic_DEF:0 "モルダヴィア民主共和国"
+ MOL_principality:0 "モルダヴィア公国"
+ MOL_principality_DEF:0 "モルダヴィア公国"
  MOL_republic:0 "モルダヴィア共和国"
  MOL_republic_DEF:0 "モルダヴィア共和国"
  
@@ -539,9 +542,6 @@
  PRE_duchy_DEF:0 "プロイセン公国"
  PRE_kingdom:0 "プロイセン王国"
  PRE_kingdom_DEF:0 "プロイセン王国"
- 
- ROM_republic:0 "ルーマニア共和国"
- ROM_republic_DEF:0 "ルーマニア共和国"
  
  ROM_kingdom:0 "ルーマニア王国"
  ROM_kingdom_DEF:0 "ルーマニア王国"
@@ -689,6 +689,8 @@
  
  ETH_empire:0 "エチオピア帝国"
  ETH_empire_DEF:0 "エチオピア帝国"
+ ETH_federal_democratic_republic:0 "エチオピア連邦民主共和国"
+ ETH_federal_democratic_republic_DEF:0 "エチオピア連邦民主共和国"
  
  GAB_republic:0 "ガボン共和国"
  GAB_republic_DEF:0 "ガボン共和国"
@@ -761,8 +763,12 @@
  MZB_republic_radical_socialism:0 "モザンビーク人民共和国"
  MZB_republic_radical_socialism_DEF:0 "モザンビーク人民共和国"
  
- NGA:0 "ナイジェリア"
- NGA_DEF:0 "ナイジェリア"
+ NGA_federation:0 "ナイジェリア連邦"
+ NGA_federation_DEF:0 "ナイジェリア連邦"
+ NGA_federation_republic:0 "ナイジェリア連邦共和国"
+ NGA_federation_republic_DEF:0 "ナイジェリア連邦共和国"
+ NGA_republic:0 "ナイジェリア共和国"
+ NGA_republic_DEF:0 "ナイジェリア共和国"
  
  NGR_republic:0 "ニジェール共和国"
  NGR_republic_DEF:0 "ニジェール共和国"
@@ -824,8 +830,8 @@
  VOL_republic:0 "オートボルタ共和国"
  VOL_republic_DEF:0 "オートボルタ共和国"
  
- WES:0 "西サハラ"
- WES_DEF:0 "西サハラ"
+ WES_republic:0 "西サハラ共和国"
+ WES_republic_DEF:0 "西サハラ共和国"
  
  ZAM_republic:0 "ザンビア共和国"
  ZAM_republic_DEF:0 "ザンビア共和国"
@@ -864,8 +870,8 @@
  COS_republic:0 "コスタリカ共和国"
  COS_republic_DEF:0 "コスタリカ共和国"
  
- CRC:0 "キュラソー共和国"
- CRC_DEF:0 "キュラソー共和国"
+ CRC_republic:0 "キュラソー共和国"
+ CRC_republic_DEF:0 "キュラソー共和国"
  
  #CSA:0 "アメリカ"
  #CSA_DEF:0 "アメリカ"
@@ -949,23 +955,26 @@
  HAW_kingdom:0 "ハワイ王国"
  HAW_kingdom_DEF:0 "ハワイ王国"
  
- MHL_republic:0 "マーシャル諸島共和国"
- MHL_republic_DEF:0 "マーシャル諸島共和国"
- 
  NZL_kingdom:0 "ニュージーランド王国"
  NZL_kingdom_DEF:0 "ニュージーランド王国"
  
  PNG_independent_state:0 "パプアニューギニア独立国"
  PNG_independent_state_DEF:0 "パプアニューギニア独立国"
  
- SOL_republic:0 "ソロモン諸島共和国"
- SOL_republic_DEF:0 "ソロモン諸島共和国"
+ SAM_independent_state:0 "サモア独立国"
+ SAM_independent_state_DEF:0 "サモア独立国"
+ 
+ SOL_republic:0 "ソロモン共和国"
+ SOL_republic_DEF:0 "ソロモン共和国"
  
  TAH_kingdom:0 "タヒチ王国"
  TAH_kingdom_DEF:0 "タヒチ王国"
  
 ##GEACPS
 #アジア
+ ABK_republic:0 "アブハジア共和国"
+ ABK_republic_DEF:0 "アブハジア共和国"
+ 
  ANH_warlord:0 "安徽軍閥"
  ANH_warlord_DEF:0 "安徽軍閥"
  
@@ -975,14 +984,14 @@
  BHK_republic:0 "ブハラ共和国"
  BHK_republic_DEF:0 "ブハラ共和国"
  
- BHR:0 "バーレーン"
- BHR_DEF:0 "バーレーン"
+ BHR_kingdom:0 "バーレーン王国"
+ BHR_kingdom_DEF:0 "バーレーン王国"
  
- BNG:0 "バンガナパッレ"
- BNG_DEF:0 "バンガナパッレ"
+ BNG_kingdom:0 "バンガナパッレ王国"
+ BNG_kingdom_DEF:0 "バンガナパッレ王国"
  
- BRN:0 "ブルネイ"
- BRN_DEF:0 "ブルネイ"
+ BRN_peace_abode_nation:0 "平和の地ブルネイ国"
+ BRN_peace_abode_nation_DEF:0 "平和の地ブルネイ国"
  
  CCS_republic:0 "コーカサス共和国"
  CCS_republic_DEF:0 "コーカサス共和国"
@@ -1027,9 +1036,6 @@
  INC_union:0 "インドシナ連合"
  INC_union_DEF:0 "インドシナ連合"
  
- JAK_kingdom:0 "ジャンムー・カシュミール王国"
- JAK_kingdom_DEF:0 "ジャンムー・カシュミール王国"
- 
  JIA_warlord:0 "江西軍閥"
  JIA_warlord_DEF:0 "江西軍閥"
  
@@ -1038,6 +1044,9 @@
  
  JOH_sultanate:0 "ジョホール・スルタン国"
  JOH_sultanate_DEF:0 "ジョホール・スルタン国"
+ 
+ KAS_kingdom:0 "カシュミール王国"
+ KAS_kingdom_DEF:0 "カシミール王国"
  
  KED_sultanate:0 "ケダ・スルタン国"
  KED_sultanate_DEF:0 "ケダ・スルタン国"
@@ -1053,9 +1062,6 @@
  
  MCA_warlord:0 "澳門軍閥"
  MCA_warlord_DEF:0 "澳門軍閥"
- 
- MOU_republic:0 "山岳共和国"
- MOU_republic_DEF:0 "山岳共和国"
  
  MYS_kingdom:0 "マイソール王国"
  MYS_kingdom_DEF:0 "マイソール王国"
@@ -1140,8 +1146,8 @@
  XIK_warlord:0 "西康軍閥"
  XIK_warlord_DEF:0 "西康軍閥"
  
- YNN_republic:0 "ヤマロ・ネネツ共和国"
- YNN_republic_DEF:0 "ヤマロ・ネネツ共和国"
+ YML_republic:0 "ヤマリア共和国"
+ YML_republic_DEF:0 "ヤマリア共和国"
  
  ZHI_warlord:0 "直隷軍閥"
  ZHI_warlord_DEF:0 "直隷軍閥"
@@ -1155,8 +1161,11 @@
  ADR_principality:0 "アンドラ公国"
  ADR_principality_DEF:0 "アンドラ公国"
  
- #ALA:0 ""
- #ALA_DEF:0 ""
+ ALA_republic:0 "オーランド共和国"
+ ALA_republic_DEF:0 "オーランド共和国"
+ 
+ AOS_republic:0 "アオスタ共和国"
+ AOS_republic_DEF:0 "アオスタ共和国"
  
  DAL_kingdom:0 "ダルマチア王国"
  DAL_kingdom_DEF:0 "ダルマチア王国"
@@ -1164,8 +1173,8 @@
  DON_republic:0 "ドン共和国"
  DON_republic_DEF:0 "ドン共和国"
  
- FRO_republic:0 "フェロー諸島共和国"
- FRO_republic_DEF:0 "フェロー諸島共和国"
+ FRO_republic:0 "フェロー共和国"
+ FRO_republic_DEF:0 "フェロー共和国"
  
  GIB_republic:0 "ジブラルタル共和国"
  GIB_republic_DEF:0 "ジブラルタル共和国"
@@ -1188,8 +1197,8 @@
  MCO_principality:0 "モナコ公国"
  MCO_principality_DEF:0 "モナコ公国"
  
- MNN_republic:0 "マン島共和国"
- MNN_republic_DEF:0 "マン島共和国"
+ MNN_republic:0 "マン共和国"
+ MNN_republic_DEF:0 "マン共和国"
  
  RHI_republic:0 "ライン共和国"
  RHI_republic_DEF:0 "ライン共和国"
@@ -1231,9 +1240,6 @@
  SRD_kingdom:0 "サルディーニャ王国"
  SRD_kingdom_DEF:0 "サルディーニャ王国"
  
- VAL_republic:0 "ヴァッレ・ダオスタ共和国"
- VAL_republic_DEF:0 "ヴァッレ・ダオスタ共和国"
- 
  VAT_city_state:0 "バチカン市国"
  VAT_city_state_DEF:0 "バチカン市国"
  
@@ -1244,56 +1250,69 @@
  VOJ_republic_DEF:0 "ヴォイヴォディナ共和国"
  
 #アフリカ
- COM:0 "コモロ"
- COM_DEF:0 "コモロ"
+ AMB_federal_republic:0 "アンバゾニア連邦共和国"
+ AMB_federal_republic_DEF:0 "アンバゾニア連邦共和国"
  
- CPV:0 "カーボベルデ"
- CPV_DEF:0 "カーボベルデ"
+ COM_federal_islamic_republic:0 "コモロ・イスラム連邦共和国"
+ COM_federal_islamic_republic_DEF:0 "コモロ・イスラム連邦共和国"
+ COM_republic:0 "コモロ共和国"
+ COM_republic_DEF:0 "コモロ共和国"
+ COM_state:0 "コモロ国"
+ COM_state_DEF:0 "コモロ国"
+ COM_union:0 "コモロ連合"
+ COM_union_DEF:0 "コモロ連合"
  
- CYR:0 "キレナイカ"
- CYR_DEF:0 "キレナイカ"
+ CPV_republic:0 "カーボベルデ共和国"
+ CPV_republic_DEF:0 "カーボベルデ共和国"
  
- EQA:0 "赤道アフリカ"
- EQA_DEF:0 "赤道アフリカ"
+ CYR_emirate:0 "キレナイカ首長国"
+ CYR_emirate_DEF:0 "キレナイカ首長国"
  
- FEZ:0 "フェザーン"
- FEZ_DEF:0 "フェザーン"
+ EQA_republic:0 "赤道アフリカ共和国"
+ EQA_republic_DEF:0 "赤道アフリカ共和国"
  
- LSO:0 "バストランド"
- LSO_DEF:0 "バストランド"
+ FEZ_republic:0 "フェザーン共和国"
+ FEZ_republic_DEF:0 "フェザーン共和国"
  
- MUS:0 "モーリシャス"
- MUS_DEF:0 "モーリシャス"
+ LSO_kingdom:0 "レソト王国"
+ LSO_kingdom_DEF:0 "レソト王国"
  
- MYT:0 "マヨット"
- MYT_DEF:0 "マヨット"
+ MUS_republic:0 "モーリシャス共和国"
+ MUS_republic_DEF:0 "モーリシャス共和国"
  
- R-U:0 "ルアンダ・ウルンディ"
- R-U_DEF:0 "ルアンダ・ウルンディ"
+ MYT_republic:0 "マヨット共和国"
+ MYT_republic_DEF:0 "マヨット共和国"
  
- REU:0 "レユニオン"
- REU_DEF:0 "レユニオン"
+ R-U_united_kingdom:0 "ルアンダ・ウルンディ連合王国"
+ R-U_united_kingdom_DEF:0 "ルアンダ・ウルンディ連合王国"
  
- SML:0 "ソマリランド"
- SML_DEF:0 "ソマリランド"
+ REU_republic:0 "レユニオン共和国"
+ REU_republic_DEF:0 "レユニオン共和国"
  
- SSD:0 "南スーダン"
- SSD_DEF:0 "南スーダン"
+ SML_republic:0 "ソマリランド共和国"
+ SML_republic_DEF:0 "ソマリランド共和国"
+ SML_state:0 "ソマリランド国"
+ SML_state_DEF:0 "ソマリランド国"
  
- STP:0 "サントメ・プリンシペ"
- STP_DEF:0 "サントメ・プリンシペ"
+ SSD_republic:0 "南スーダン共和国"
+ SSD_republic_DEF:0 "南スーダン共和国"
  
- SWL:0 "スワジランド"
- SWL_DEF:0 "スワジランド"
+ STP_democratic_republic:0 "サントメ・プリンシペ民主共和国"
+ STP_democratic_republic_DEF:0 "サントメ・プリンシペ民主共和国"
  
- SYC:0 "セーシェル"
- SYC_DEF:0 "セーシェル"
+ SWL_kingdom:0 "スワジランド王国"
+ SWL_kingdom_DEF:0 "スワジランド王国"
  
- TRP:0 "トリポリタニア"
- TRP_DEF:0 "トリポリタニア"
+ SYC_republic:0 "セーシェル共和国"
+ SYC_republic_DEF:0 "セーシェル共和国"
  
- WAF:0 "西アフリカ"
- WAF_DEF:0 "西アフリカ"
+ TRP_kigndom:0 "トリポリタニア王国"
+ TRP_kigndom_DEF:0 "トリポリタニア王国"
+ TRP_republic:0 "トリポリタニア共和国"
+ TRP_republic_DEF:0 "トリポリタニア共和国"
+ 
+ WAF_federation:0 "西アフリカ連邦"
+ WAF_federation_DEF:0 "西アフリカ連邦"
  
  ZAN_sultanate:0 "ザンジバル・スルタン国"
  ZAN_sultanate_DEF:0 "ザンジバル・スルタン国"
@@ -1301,133 +1320,142 @@
  ZAN_peoples_republic_DEF:0 "ザンジバル人民共和国"
  
 #新大陸
- AGU:0 "アンギラ"
- AGU_DEF:0 "アンギラ"
+ AGU_republic:0 "アンギラ共和国"
+ AGU_republic_DEF:0 "アンギラ共和国"
  
- ARB:0 "アルバ"
- ARB_DEF:0 "アルバ"
+ ARB_republic:0 "アルバ共和国"
+ ARB_republic_DEF:0 "アルバ共和国"
  
- ATG:0 "アンティグア・バーブーダ"
- ATG_DEF:0 "アンティグア・バーブーダ"
+ ATG_republic:0 "アンティグア・バーブーダ共和国"
+ ATG_republic_DEF:0 "アンティグア・バーブーダ共和国"
  
- BMU:0 "バミューダ"
- BMU_DEF:0 "バミューダ"
+ BMU_republic:0 "バミューダ共和国"
+ BMU_republic_DEF:0 "バミューダ共和国"
  
- BRB:0 "バルバドス"
- BRB_DEF:0 "バルバドス"
+ BRB_republic:0 "バルバドス共和国"
+ BRB_republic_DEF:0 "バルバドス共和国"
  
- CYM:0 "ケイマン島"
- CYM_DEF:0 "ケイマン島"
+ CYM_republic:0 "ケイマン共和国"
+ CYM_republic_DEF:0 "ケイマン共和国"
  
- DMA:0 "ドミニカ"
- DMA_DEF:0 "ドミニカ"
+ DMA_commonwealth:0 "ドミニカ国"
+ DMA_commonwealth_DEF:0 "ドミニカ国"
  
- FKL:0 "フォークランド"
- FKL_DEF:0 "フォークランド"
+ FKL_republic:0 "フォークランド共和国"
+ FKL_republic_DEF:0 "フォークランド共和国"
  
- GRD:0 "グレナダ"
- GRD_DEF:0 "グレナダ"
+ GRD_republic:0 "グレナダ共和国"
+ GRD_republic_DEF:0 "グレナダ共和国"
  
- GRL:0 "グリーンランド"
- GRL_DEF:0 "グリーンランド"
+ GRL_republic:0 "グリーンランド共和国"
+ GRL_republic_DEF:0 "グリーンランド共和国"
  
- MSR:0 "モンセトラ"
- MSR_DEF:0 "モンセトラ"
+ LEW_federation:0 "リーワード連邦"
+ LEW_federation_DEF:0 "リーワード連邦"
  
- MTQ:0 "マルティニーク"
- MTQ_DEF:0 "マルティニーク"
+ MSR_republic:0 "モントセラト共和国"
+ MSR_republic_DEF:0 "モントセラト共和国"
  
- NFL:0 "ニューファンドランド"
- NFL_DEF:0 "ニューファンドランド"
+ MTQ_republic:0 "マルティニーク共和国"
+ MTQ_republic_DEF:0 "マルティニーク共和国"
  
- SBL:0 "サン・バルテルミー"
- SBL_DEF:0 "サン・バルテルミー"
+ NFL_republic:0 "ニューファンドランド共和国"
+ NFL_republic_DEF:0 "ニューファンドランド共和国"
  
- SHN:0 "セントヘレナ"
- SHN_DEF:0 "セントヘレナ"
+ SBL_republic:0 "サン・バルテルミー共和国"
+ SBL_republic_DEF:0 "サン・バルテルミー共和国"
  
- SKN:0 "セントクリストファー・ネイビス"
- SKN_DEF:0 "セントクリストファー・ネイビス"
+ SHN_republic:0 "セントヘレナ共和国"
+ SHN_republic_DEF:0 "セントヘレナ共和国"
  
- SLC:0 "セントルシア"
- SLC_DEF:0 "セントルシア"
+ SKN_federation:0 "セントクリストファー・ネイビス連邦"
+ SKN_federation_DEF:0 "セントクリストファー・ネイビス連邦"
  
- SPM:0 "サンピエール島及びミクロン島"
- SPM_DEF:0 "サンピエール島及びミクロン島"
+ SLC_republic:0 "セントルシア共和国"
+ SLC_republic_DEF:0 "セントルシア共和国"
  
- SVG:0 "セントビンセント及びグレナディーン諸島"
- SVG_DEF:0 "セントビンセント及びグレナディーン諸島"
+ SPM_republic:0 "サンピエール及びミクロン共和国"
+ SPM_republic_DEF:0 "サンピエール及びミクロン共和国"
  
- TCA:0 "タークス・カイコス"
- TCA_DEF:0 "タークス・カイコス"
+ SVG_republic:0 "セントビンセント及びグレナディーン共和国"
+ SVG_republic_DEF:0 "セントビンセント及びグレナディーン共和国"
+ 
+ TCA_republic:0 "タークス・カイコス共和国"
+ TCA_republic_DEF:0 "タークス・カイコス共和国"
+ 
+ VIR_federation:0 "ヴァージン連邦"
+ VIR_federation_DEF:0 "ヴァージン連邦"
+ 
+ WIW_federation:0 "ウィンドワード連邦"
+ WIW_federation_DEF:0 "ウィンドワード連邦"
  
 #大洋州
- CHR:0 "クリスマス島"
- CHR_DEF:0 "クリスマス島"
+ CHR_republic:0 "クリスマス共和国"
+ CHR_republic_DEF:0 "クリスマス共和国"
  
- COK:0 "クック諸島"
- COK_DEF:0 "クック諸島"
+ COK_republic:0 "クック共和国"
+ COK_republic_DEF:0 "クック共和国"
  
- KIR:0 "キリバス"
- KIR_DEF:0 "キリバス"
+ KIR_republic:0 "キリバス共和国"
+ KIR_republic_DEF:0 "キリバス共和国"
  
- MHL:0 "マーシャル諸島"
- MHL_DEF:0 "マーシャル諸島"
+ MHL_republic:0 "マーシャル共和国"
+ MHL_republic_DEF:0 "マーシャル共和国"
  
- NCL:0 "ニューカレドニア"
- NCL_DEF:0 "ニューカレドニア"
+ NCL_republic:0 "ニューカレドニア共和国"
+ NCL_republic_DEF:0 "ニューカレドニア共和国"
  
- NFK:0 "ノーフォーク島"
- NFK_DEF:0 "ノーフォーク島"
+ NFK_republic:0 "ノーフォーク共和国"
+ NFK_republic_DEF:0 "ノーフォーク共和国"
  
- NIU:0 "ニウエ"
- NIU_DEF:0 "ニウエ"
+ NIU_republic:0 "ニウエ共和国"
+ NIU_republic_DEF:0 "ニウエ共和国"
  
- NMR:0 "ナウル"
- NMR_DEF:0 "ナウル"
+ NMR_republic:0 "ナウル共和国"
+ NMR_republic_DEF:0 "ナウル共和国"
  
- PCN:0 "ピトケアン"
- PCN_DEF:0 "ピトケアン"
+ PCN_republic:0 "ピトケアン共和国"
+ PCN_republic_DEF:0 "ピトケアン共和国"
  
- PLW:0 "パラオ"
- PLW_DEF:0 "パラオ"
+ PLW_republic:0 "パラオ共和国"
+ PLW_republic_DEF:0 "パラオ共和国"
  
- TKL:0 "トケラウ"
- TKL_DEF:0 "トケラウ"
+ TKL_republic:0 "トケラウ共和国"
+ TKL_republic_DEF:0 "トケラウ共和国"
  
- TON:0 "トンガ"
- TON_DEF:0 "トンガ"
+ TON_kingdom:0 "トンガ王国"
+ TON_kingdom_DEF:0 "トンガ王国"
  
- TVL:0 "ツバル"
- TVL_DEF:0 "ツバル"
+ TVL_republic:0 "ツバル共和国"
+ TVL_republic_DEF:0 "ツバル共和国"
  
- VUT:0 "バヌアツ"
- VUT_DEF:0 "バヌアツ"
+ VUT_republic:0 "バヌアツ共和国"
+ VUT_republic_DEF:0 "バヌアツ共和国"
  
- WLF:0 "ウォリスフツナ"
- WLF_DEF:0 "ウォリスフツナ"
+ WLF_republic:0 "ウォリスフツナ共和国"
+ WLF_republic_DEF:0 "ウォリスフツナ共和国"
  
 #アメリカ合衆国
- ALS:0 "アラスカ"
- ALS_DEF:0 "アラスカ"
+ ALS_republic:0 "アラスカ共和国"
+ ALS_republic_DEF:0 "アラスカ共和国"
  
- CAL:0 "カリフォルニア"
- CAL_DEF:0 "カリフォルニア"
+ CAL_republic:0 "カリフォルニア共和国"
+ CAL_republic_DEF:0 "カリフォルニア共和国"
  
- CLU:0 "ワシントン・コロンビア"
- CLU_DEF:0 "ワシントン・コロンビア"
+#CLU:0 "ワシントン・コロンビア"
+#CLU_DEF:0 "ワシントン・コロンビア"
  
- GLR:0 "五大湖地域"
- GLR_DEF:0 "五大湖地域"
+#GLR:0 "五大湖地域"
+#GLR_DEF:0 "五大湖地域"
  
- NEL:0 "ニューイングランド"
- NEL_DEF:0 "ニューイングランド"
+ NEL_republic:0 "ニューイングランド共和国"
+ NEL_republic_DEF:0 "ニューイングランド共和国"
  
- NMX:0 "ニューメキシコ"
- NMX_DEF:0 "ニューメキシコ"
+ NMX_republic:0 "ニューメキシコ共和国"
+ NMX_republic_DEF:0 "ニューメキシコ共和国"
  
- TEX:0 "テキサス"
- TEX_DEF:0 "テキサス"
+ TEX_republic:0 "テキサス共和国"
+ TEX_republic_DEF:0 "テキサス共和国"
  
- WAS:0 "ワシントン"
- WAS_DEF:0 "ワシントン"
+ WAS_republic:0 "ワシントン共和国"
+ WAS_republic_DEF:0 "ワシントン共和国"
