スパイべ途中

--- a/localisation/_geacps_special_event_l_english.yml
+++ b/localisation/_geacps_special_event_l_english.yml
@@ -1,6 +1,14 @@
 ﻿l_english:
- geacps_special_event_TEXT:0 "時計"
+ geacps_special_event.t:0 "時計"
  
  SE_SECOND_ACW_TITLE:0 "Second America Civil War"
  SE_SECOND_ACW_TEXT:0 "War, War is never change"
  
+ special_event_title_2020:0 "あすぱら記念日"
+ special_event_desc_2020:0 "あすぱらぱら"
+ special_event_exit_2020:0 "§Bライスシャワー!"
+
+ special_event_title_nepal:0 "幸福の国"
+ special_event_desc_nepal:0 "数多の人種、言語、宗教、そして文化、\n進歩ありし国ネパール万歳！"
+ special_event_exit_nepal:0 "§B常に幸福を！"
+
