--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -3,13 +3,13 @@
  JAP_1-22_Incident:0 "一・二二事件"
  JAP_Opening_of_the_extraordinary_session:0 "臨時会の開会"
  JAP_Declaration_of_martial_law:0 "戒嚴の宣告"
- JAP_Election_of_Prime_Minister:0 "首相の選出"
- JAP_Draft_Constitution:0 "憲法草案"
- JAP_Draft_budget:0 "予算案"
  JAP_Re-exclusion_of_imperialists:0 "皇道派を再排除"
  JAP_Agrarian_watchdog:0 "農本主義者の監視"
  JAP_Naval_officer_s_purge:0 "海軍士官の粛軍"
  JAP_Stability_of_the_situation:0 "事態の安定"
+ JAP_Election_of_Prime_Minister:0 "首相の選出"
+ JAP_Draft_Constitution:0 "憲法草案"
+ JAP_Draft_budget:0 "予算案"
  JAP_Economy:0 "経済"
  JAP_Supporting_local_industrial_news_federations:0 "各地の産業報国連盟を支援"
  JAP_Military:0 "軍事"
@@ -103,9 +103,12 @@
  geacps_JAP.1.d:0 "A"
  geacps_JAP.1.a:0 "天皇陛下万歳！"
  geacps_JAP.2.t:0 "一・二二事件"
- geacps_JAP.2.d:0 "昭和21年1月22日、陸軍青年将校らと一部の農本主義思想家、海軍の青年将校たちが帝都にてクーデターを起こし、銃撃された東条首相は重体になられた。この事件と未だ続く志那事変の対処の為にも直ぐに臨時代理を決める必要がある。\n臨時代理としては、内務大臣である安藤紀三郎と外務大臣である重光葵の二人がいる。"
- geacps_JAP.2.a:0 "東條の腹心・分身の安藤紀三郎に"
- geacps_JAP.2.b:0 ""欠点がない"重光葵に"
+ geacps_JAP.2.d:0 "昭和21年1月22日、陸軍青年将校らと一部の農本主義思想家、海軍の青年将校たちが帝都にてクーデターを起こし、銃撃された東条首相は重体になられた..."
+ geacps_JAP.2.a:0 "叛乱軍を捕らえよ！"
+ geacps_JAP.3.t:0 "臨時代理"
+ geacps_JAP.3.d:0 "一・二二事件と未だ続く志那事変の対処の為にも直ぐに臨時代理を決める必要がある。\n臨時代理としては、内務大臣である安藤紀三郎と外務大臣である重光葵の二人がいる。"
+ geacps_JAP.3.a:0 "東條の腹心・分身の安藤紀三郎に"
+ geacps_JAP.3.b:0 ""欠点がない"重光葵に"
  geacps_JAP.001.title:0 "海軍を主導する人材の選定"
  geacps_JAP.001.desc:0 "太平洋戦争では今までの戦争とは打って変わった戦法も重要であることが分かった。これらのことを踏まえ、我々はこれからの時代の帝国艦隊を率いていく人材を選定する必要がある。これは国家の存亡にかかわる重大な事案であり、慎重に考えなければならない・・・"
  geacps_JAP.001.a:0 "航空主兵主義者を据え置く"
