--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -102,13 +102,18 @@
  geacps_JAP.1.t:0 "大日本帝國"
  geacps_JAP.1.d:0 "A"
  geacps_JAP.1.a:0 "天皇陛下万歳！"
- geacps_JAP.2.t:0 "一・二二事件"
+ geacps_JAP.2.t:0 "一・二二事件の発生"
  geacps_JAP.2.d:0 "昭和21年1月22日、陸軍青年将校らと一部の農本主義思想家、海軍の青年将校たちが帝都にてクーデターを起こし、銃撃された東条首相は重体になられた..."
  geacps_JAP.2.a:0 "叛乱軍を捕らえよ！"
  geacps_JAP.3.t:0 "臨時代理"
  geacps_JAP.3.d:0 "一・二二事件と未だ続く志那事変の対処の為にも直ぐに臨時代理を決める必要がある。\n臨時代理としては、内務大臣である安藤紀三郎と外務大臣である重光葵の二人がいる。"
  geacps_JAP.3.a:0 "東條の腹心・分身の安藤紀三郎に"
  geacps_JAP.3.b:0 ""欠点がない"重光葵に"
+ geacps_JAP.4.t:0 "日本内戦の予感"
+ geacps_JAP.4.d:0 "A"
+ geacps_JAP.4.a:0 "A"
+ geacps_JAP.4.b:0 "B"
+ geacps_JAP.4.c:0 "C"
  geacps_JAP.001.title:0 "海軍を主導する人材の選定"
  geacps_JAP.001.desc:0 "太平洋戦争では今までの戦争とは打って変わった戦法も重要であることが分かった。これらのことを踏まえ、我々はこれからの時代の帝国艦隊を率いていく人材を選定する必要がある。これは国家の存亡にかかわる重大な事案であり、慎重に考えなければならない・・・"
  geacps_JAP.001.a:0 "航空主兵主義者を据え置く"
@@ -129,6 +134,12 @@
  JAP_1-22_Incident_desc:0 "憲兵によると、我が国における反政府運動が激化しようとしているらしい。\n具体的にどのような人物、もしくは組織が裏に潜んでいるかという事は掴めてはいないものの、帝都の襲撃又は占拠等の後、政府首脳・重臣への襲撃を計画しているらしい。\nこの馬鹿馬鹿しい計画に対し、どの様に行動すべきだろうか？"
  Outbreak_of_the_1-22_Incident:0 "一・二二事件の発生"
  Outbreak_of_the_1-22_Incident_desc:0 "一・二二事件の発生"
+ Japan_Civil_War_in_the_making:0 "日本内戦の予感"
+ Japan_Civil_War_in_the_making_desc:0 "日本内戦の予感"
+ JAP_The_Second_Japanese_Civil_War:0 "第二次日本内戦"
+ JAP_The_Second_Japanese_Civil_War_desc:0 "我々の失敗により、国家が二分されようとしている。いや、もしかしたらそれ以上かもしれないが..."
+ The_Second_Japanese_Civil_War:0 "第二次日本内戦"
+ The_Second_Japanese_Civil_War_desc:0 "第二次日本内戦"
  JAP_national_policy_research_outline:0 "国策研究大綱"
  JAP_national_policy_research_outline_desc:0 "研究こそすべて！\n頑張ろう\nこのディシジョンは4年ごとに選択可能です"
  national_policy_research_outline:0 "[GetYear]年国策研究大綱"
