--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -8,7 +8,7 @@
  STATE_7:0 "ホラント"
  STATE_8:0 "ルクセンブルク"
  STATE_9:0 "ボヘミア"
- STATE_10:0 "ワルシャワ" 
+ STATE_10:0 "ワルシャワ"
  STATE_11:0 "アウクシュタイティヤ"
  STATE_12:0 "ヴィドゼメ"
  STATE_13:0 "サーレマー島"
@@ -41,13 +41,13 @@
  STATE_40:0 "アルタイ"
  STATE_41:0 "カスティージャ・ラ・ヌエバ"
  STATE_42:0 "プファルツ"
-#STATE_43:0 ""
-#STATE_44:0 ""
+ STATE_43:0 "ハンガリー北部"
+ STATE_44:0 "アルバニア"
  STATE_45:0 "バチュカ"
  STATE_46:0 "ムンテニア"
  STATE_47:0 "中央ギリシャ"
  STATE_48:0 "ソフィア"
-#STATE_49:0 ""
+ STATE_49:0 "アンカラ"
  STATE_50:0 "ヴュルテンベルク"
  STATE_51:0 "ハンブルク"
  STATE_52:0 "オーバーバイエルン"
@@ -68,116 +68,463 @@
  STATE_67:0 "ゴルヌィ・シロンスク"
  STATE_68:0 "ルブシュ"
  STATE_69:0 "ウースチー"	#ドイツ語: アウシヒ
+ STATE_70:0 "スロヴァキア西部"
+ STATE_71:0 "スロヴァキア東部"
+ STATE_72:0 "ザオルジェ"
  STATE_73:0 "ザカルパッチャ"
  STATE_74:0 "オパヴァ"	#ドイツ語: トロッパウ
+ STATE_75:0 "モラヴィア"
+ STATE_76:0 "北トランシルヴァニア"
  STATE_77:0 "南ドブロジャ"
+ STATE_78:0 "ベッサラビア"
+ STATE_79:0 "モルドヴァ"
  STATE_80:0 "チェルニウツィー"
+ STATE_81:0 "オルテニア"
+ STATE_82:0 "バナト"
+ STATE_83:0 "クリシャナ"
+ STATE_84:0 "トランシルヴァニア"
  STATE_85:0 "ポモージェ"
  STATE_86:0 "ポズナン"
  STATE_87:0 "ウッチ"
+ STATE_88:0 "クラクフ"
  STATE_89:0 "イヴァーノ＝フランキーウシク"
+ STATE_90:0 "キェルツェ"
  STATE_91:0 "リヴィウ"
+ STATE_92:0 "ルブリン"
  STATE_93:0 "ヴォルィーニ"
  STATE_94:0 "ブレスト"
  STATE_95:0 "フロドナ"
  STATE_96:0 "キエフ市"
+ STATE_97:0 "ビャウィストク"
  STATE_98:0 "グダニスク"
+ STATE_99:0 "ユトランド"
+ STATE_100:0 "アイスランド"
  STATE_101:0 "南グリーンランド西岸"
+ STATE_102:0 "スロベニア"
+ STATE_103:0 "ダルマチア"
+ STATE_104:0 "ボスニア"
+ STATE_105:0 "モンテネグロ"
+ STATE_106:0 "マケドニア"
+ STATE_107:0 "セルビア"
+ STATE_108:0 "モラヴァ"
+ STATE_109:0 "クロアチア"
+ STATE_110:0 "エストラン"
+ STATE_111:0 "ウーシマー"
+ STATE_112:0 "リスボン"
+ STATE_113:0 "レンスター"
+ STATE_114:0 "サルデーニャ"
  STATE_115:0 "シチリア"
+ STATE_116:0 "マルタ"
+ STATE_117:0 "カンパニア"
+ STATE_118:0 "ジブラルタル"
+ STATE_119:0 "アイルランド北部"
  STATE_120:0 "高地と島々"
  STATE_121:0 "イースト・スコットランド"
+ STATE_122:0 "ウェールズ"
  STATE_123:0 "サウス・ウェスト・イングランド"
+ STATE_124:0 "ゴットランド"
  STATE_125:0 "イースト・オブ・イングランド"
  STATE_126:0 "カンブリア"
  STATE_127:0 "サウス・イースト・イングランド"
+ STATE_128:0 "ウェスト・ミッドランズ"
+ STATE_129:0 "イースト・ミッドランズ"
  STATE_130:0 "ヨークシャー・アンド・ザ・ハンバー"
  STATE_131:0 "ノース・イースト・イングランド"
  STATE_132:0 "ノース・ウェスト・イングランド"
  STATE_133:0 "サウス・ウェスト・スコットランド"
+ STATE_134:0 "コノート"
+ STATE_135:0 "マンスター"
  STATE_136:0 "ノース・イースト・スコットランド"
+ STATE_137:0 "クリミア"
+ STATE_138:0 "スコーネ"
+ STATE_139:0 "スモーランド"
+ STATE_140:0 "ヴェステルイェートランド"
+ STATE_141:0 "スヴェアランド"
+ STATE_142:0 "ヴェストラン"
+ STATE_143:0 "トロンデラーグ"
+ STATE_144:0 "ノルドノルゲ"
+ STATE_145:0 "オーランド"
  STATE_146:0 "フセヴォロジスク"
  STATE_147:0 "サラ"
+ STATE_148:0 "ラッピ"
+ STATE_149:0 "ポフヤンマー"
+ STATE_150:0 "サヴォ"
  STATE_151:0 "グリシュン"
  STATE_152:0 "オーバーエスターライヒ"
  STATE_153:0 "北チロル"
+ STATE_154:0 "アルフェルド"
+ STATE_155:0 "ドナウ川西岸"
+ STATE_156:0 "カラブリア"
  STATE_157:0 "マルケ"
+ STATE_158:0 "ピエモンテ"
+ STATE_159:0 "ロンバルディア"
  STATE_160:0 "ヴェネト"
+ STATE_161:0 "エミリア・ロマーニャ"
+ STATE_162:0 "トスカーナ"
+ STATE_163:0 "ザラ"
+ STATE_164:0 "ドデカネス"
+ STATE_165:0 "カタルーニャ"
+ STATE_166:0 "アラゴン西部"
+ STATE_167:0 "バレンシア"
+ STATE_168:0 "ムルシア"
+ STATE_169:0 "セビリア"
+ STATE_170:0 "エストレマドゥーラ"
+ STATE_171:0 "ガリシア"
+ STATE_172:0 "ナバラ"
+ STATE_173:0 "グラナダ"
+ STATE_174:0 "レオン"
+ STATE_175:0 "シウダー・レアル"
+ STATE_176:0 "ブルゴス"
+ STATE_177:0 "イスラス・バレアレス"
+ STATE_178:0 "イスラス・カナリアス"
+ STATE_179:0 "ベージャ"
+ STATE_180:0 "ポルト"
+ STATE_181:0 "グアルダ"
+ STATE_182:0 "クレタ"
+ STATE_183:0 "キプロス"
  STATE_184:0 "西トラキア"
  STATE_185:0 "イピロス"
- STATE_189:0 "小リトアニア"
+ STATE_186:0 "ペロポネソス"
+ STATE_187:0 "エーゲ海諸島"
+ STATE_188:0 "メーメル"
  STATE_189:0 "ジェマイティヤ"
+ STATE_190:0 "クルゼメ"
+ STATE_191:0 "タルトゥ"
+ STATE_192:0 "オデッサ"
  STATE_193:0 "チェルニーヒウ"
  STATE_194:0 "ホメリ"
  STATE_195:0 "レニングラード市"
+ STATE_196:0 "ヘルソン"
+ STATE_197:0 "ムィコラーイウ"
+ STATE_198:0 "ヴィーンヌィツャ"
  STATE_199:0 "フメリニツキー"
  STATE_200:0 "ザポリージャ"
  STATE_201:0 "ジトーミル"
+ STATE_202:0 "キエフ"
+ STATE_203:0 "チェルカースィ"
  STATE_204:0 "ミンスク"
+ STATE_205:0 "カルーガ"
  STATE_206:0 "ミンスク市"
  STATE_207:0 "ヴィーツェプスク"
  STATE_208:0 "キンギセップ"
+ STATE_209:0 "プスコフ"
  STATE_210:0 "ヴェリーキエ・ルーキ"
+ STATE_211:0 "ブルガス"
+ STATE_212:0 "プロヴディフ"
+ STATE_213:0 "ムルマンスク"
+ STATE_214:0 "アルハンゲリスク"
  STATE_215:0 "白海カレリア"
  STATE_216:0 "オロネツ・カレリア"
  STATE_217:0 "コテリニコヴォ"
+ STATE_218:0 "ロストフ"
  STATE_219:0 "モスクワ"
+ STATE_220:0 "クルスク"
  STATE_221:0 "ハルキウ"
+ STATE_222:0 "オリョール"
+ STATE_223:0 "トゥーラ"
+ STATE_224:0 "ブリャンスク"
+ STATE_225:0 "スームィ"
+ STATE_226:0 "ドニプロペトロウシク"
  STATE_227:0 "ドネツィク"
  STATE_228:0 "ルハーンシク"
  STATE_229:0 "バクー"
  STATE_230:0 "エレバン"
+ STATE_231:0 "グルジア"
  STATE_232:0 "ダゲスタン"
+ STATE_233:0 "コーカサス山脈"
+ STATE_234:0 "クラスノダール"
+ STATE_235:0 "スタヴロポリ"
+ STATE_236:0 "アストラハン"
  STATE_237:0 "カルムイク"
  STATE_238:0 "ボルゴドンスク"
+ STATE_239:0 "サラトフ"
+ STATE_240:0 "ベルゴロド"
  STATE_241:0 "マヒリョウ"
  STATE_242:0 "ヴャジマ"
  STATE_243:0 "スモレンスク"
  STATE_244:0 "ポルッカラ"
  STATE_245:0 "ミルレロヴォ"
+ STATE_246:0 "ルジェフ"
  STATE_247:0 "トヴェリ"
+ STATE_248:0 "ヤロスラヴリ"
+ STATE_249:0 "カザン"
+ STATE_250:0 "ウリヤノフスク"
+ STATE_251:0 "クイブィシェフ"
+ STATE_252:0 "ゴーリキー"
+ STATE_253:0 "イヴァノヴォ"
+ STATE_254:0 "リャザン"
+ STATE_255:0 "ペンザ"
+ STATE_256:0 "チェボクサルィ"
+ STATE_257:0 "タンボフ"
+ STATE_258:0 "リペツク"
+ STATE_259:0 "ポルタヴァ"
+ STATE_260:0 "ヴォロネジ"
+ STATE_261:0 "オハイオ"
  STATE_262:0 "ネネツ"
+ STATE_263:0 "ノヴゴロド"
  STATE_264:0 "チフヴィン"
+ STATE_265:0 "ミハイロフカ"
+ STATE_266:0 "テヘラン"
  STATE_267:0 "カブール"
+ STATE_268:0 "フランス領ソマリランド"
+ STATE_269:0 "イギリス領ソマリランド"
+ STATE_270:0 "ピトケアン島"
+ STATE_271:0 "エチオピア"
+ STATE_272:0 "セネガル"
  STATE_273:0 "フェザーン"
+ STATE_274:0 "ガーナ"
+ STATE_275:0 "トランスヴァール"
+ STATE_276:0 "オンタリオ南部"
+ STATE_277:0 "メキシコシティ"
+ STATE_278:0 "パンパ"
+ STATE_279:0 "サンティアゴ"
+ STATE_280:0 "マットグロッソ"
+ STATE_281:0 "モルディブ"
  STATE_282:0 "埼玉"
  STATE_283:0 "慶陽"
+ STATE_284:0 "北島"
+ STATE_285:0 "ニューサウスウェールズ"
  STATE_286:0 "南中部"
  STATE_287:0 "ホータン"
  STATE_288:0 "マンダレー"
  STATE_289:0 "タイ中部"
+ STATE_290:0 "スペイン領アフリカ"
+ STATE_291:0 "バグダード"
+ STATE_292:0 "ナジュド"
+ STATE_293:0 "イエメン"
+ STATE_294:0 "オマーン"
+ STATE_295:0 "レオポルドヴィル"
+ STATE_296:0 "ポルトガル領ギニア"
+ STATE_297:0 "赤道ギニア"
+ STATE_298:0 "リベリア"
+ STATE_299:0 "フォークランド諸島"
+ STATE_300:0 "ウルグアイ"
+ STATE_301:0 "パラグアイ"
+ STATE_302:0 "ラパス"
+ STATE_303:0 "リマ"
+ STATE_304:0 "パナマ"
+ STATE_305:0 "エクアドル"
+ STATE_306:0 "クンディナマルカ"
+ STATE_307:0 "ミランダ"
+ STATE_308:0 "リーワード諸島"
+ STATE_309:0 "スリナム"
+ STATE_310:0 "フランス領ギアナ"
+ STATE_311:0 "イギリス領ホンジュラス"
+ STATE_312:0 "ホンジュラス"
+ STATE_313:0 "グアテマラ"
+ STATE_314:0 "エルサルバドル"
+ STATE_315:0 "キューバ"
+ STATE_316:0 "コスタリカ"
+ STATE_317:0 "ニカラグア"
+ STATE_318:0 "ハイチ"
+ STATE_319:0 "ドミニカ"
+ STATE_320:0 "フランス領インド"
+ STATE_321:0 "ゴア"
+ STATE_322:0 "ナクチュ"
+ STATE_323:0 "ネパール"
+ STATE_324:0 "ブータン"
  STATE_325:0 "昆明"
+ STATE_326:0 "香港"
+ STATE_327:0 "マニラ"
+ STATE_328:0 "吉林"
  STATE_329:0 "クズル"
  STATE_330:0 "中央モンゴル"
+ STATE_331:0 "ニューファンドランド"
+ STATE_332:0 "ラブラドール"
  STATE_333:0 "サラワク"
+ STATE_334:0 "カリマンタン"
+ STATE_335:0 "ジャワ"
  STATE_336:0 "クランタン"
+ STATE_337:0 "フェロー諸島"
+ STATE_338:0 "グロスタシャー"
+ STATE_339:0 "イズミル"
+ STATE_340:0 "ブルサ"
+ STATE_341:0 "エディルネ"
+ STATE_342:0 "アンタルヤ"
+ STATE_343:0 "アフィヨン"
+ STATE_344:0 "マラティヤ"
+ STATE_345:0 "メルスィン"
+ STATE_346:0 "コンヤ"
+ STATE_347:0 "イズミット"
+ STATE_348:0 "カイセリ"
+ STATE_349:0 "スィヴァス"
+ STATE_350:0 "ディヤルバクル"
+ STATE_351:0 "ヴォログダ"
+ STATE_352:0 "ハッキャリ"
+ STATE_353:0 "トゥンジェリ"
+ STATE_354:0 "トラブゾン"
+ STATE_355:0 "サムスン"
+ STATE_356:0 "カスタモヌ"
  STATE_357:0 "メイン"
+ STATE_358:0 "ニューヨーク"
+ STATE_359:0 "ニュージャージー"
+ STATE_360:0 "ペンシルべニア"
+ STATE_361:0 "メリーランド"
+ STATE_362:0 "バージニア"
+ STATE_363:0 "ノースカロライナ"
+ STATE_364:0 "サウスカロライナ"
+ STATE_365:0 "ジョージア"
+ STATE_366:0 "フロリダ"
+ STATE_367:0 "アラバマ"
+ STATE_368:0 "テネシー"
+ STATE_369:0 "ケンタッキー"
+ STATE_370:0 "ミシシッピ"
+ STATE_371:0 "ルイジアナ"
+ STATE_372:0 "アーカンソー"
  STATE_373:0 "サウスミズーリ"
+ STATE_374:0 "オクラホマ"
+ STATE_375:0 "テキサス"
+ STATE_376:0 "ニューメキシコ"
+ STATE_377:0 "アリゾナ"
+ STATE_378:0 "カリフォルニア"
+ STATE_379:0 "ネバダ"
+ STATE_380:0 "ユタ"
  STATE_381:0 "ワイオミング"
+ STATE_382:0 "コロラド"
+ STATE_383:0 "カンザス"
  STATE_384:0 "ネブラスカ"
+ STATE_385:0 "オレゴン"
  STATE_386:0 "ワシントン"
  STATE_387:0 "アイダホ"
+ STATE_388:0 "モンタナ"
+ STATE_389:0 "ノースダコタ"
+ STATE_390:0 "サウスダコタ"
+ STATE_391:0 "ミネソタ"
+ STATE_392:0 "アイオワ"
+ STATE_393:0 "ミシガン"
+ STATE_394:0 "ウィスコンシン"
+ STATE_395:0 "イリノイ"
+ STATE_396:0 "インディアナ"
  STATE_397:0 "コミ"
+ STATE_398:0 "ペルミ"
+ STATE_399:0 "イジェフスク"
+ STATE_400:0 "キーロフ"
+ STATE_401:0 "エンゲリス"
  STATE_402:0 "アクトベ"
+ STATE_403:0 "チュメニ"
  STATE_404:0 "カラガンダ"
+ STATE_405:0 "タシュケント"
  STATE_406:0 "クルサリー"
+ STATE_407:0 "ウラリスク"
  STATE_408:0 "沿岸"
+ STATE_409:0 "ハバロフスク"
+ STATE_410:0 "スィースターン"
+ STATE_411:0 "エスファハーン"
+ STATE_412:0 "ファールス"
+ STATE_413:0 "フーゼスターン"
+ STATE_414:0 "ケルマーン"
+ STATE_415:0 "ヘラート"
+ STATE_416:0 "ホラーサーン"
+ STATE_417:0 "ハマダーン"
+ STATE_418:0 "サムナーン"
+ STATE_419:0 "タブリーズ"
+ STATE_420:0 "ギーラーン"
+ STATE_421:0 "クルディスタン"
  STATE_422:0 "セイロン島"
  STATE_423:0 "タミル・ナードゥ"
  STATE_424:0 "アーンドラ・プラデーシュ"
  STATE_425:0 "カルナータカ"
+ STATE_426:0 "オリッサ"
  STATE_427:0 "テランガーナ"
+ STATE_428:0 "グジャラート"
  STATE_429:0 "ムンバイ"
  STATE_430:0 "中央ベンガル"
+ STATE_431:0 "西ベンガル"
+ STATE_432:0 "アッサム"
+ STATE_433:0 "ラージャスターン"
+ STATE_434:0 "アルナーチャル・プラデーシュ"
  STATE_435:0 "パトナー"
+ STATE_436:0 "ジャバルプル"
  STATE_437:0 "マディヤ・プラデーシュ"
+ STATE_438:0 "ラクナウ"
  STATE_439:0 "ハリヤーナー"
  STATE_440:0 "ラホール"
+ STATE_441:0 "カシミール"
  STATE_442:0 "カイバル・パクトゥンクワ"
+ STATE_443:0 "シンド"
  STATE_444:0 "バローチスターン"
  STATE_445:0 "カタガン＝バダフシャーン"
+ STATE_446:0 "カイロ"
+ STATE_447:0 "アレクサンドリア"
+ STATE_448:0 "トリポリ"
+ STATE_449:0 "エル・アゲイラ"
+ STATE_450:0 "ベンガジ"
+ STATE_451:0 "デルナ"
+ STATE_452:0 "マトルーフ"
+ STATE_453:0 "シナイ"
+ STATE_454:0 "パレスチナ"
+ STATE_455:0 "ヨルダン"
+ STATE_456:0 "アスワン"
+ STATE_457:0 "東部砂漠"
+ STATE_458:0 "チュニジア"
+ STATE_459:0 "アルジェ"
+ STATE_460:0 "コンスタンティーヌ"
+ STATE_461:0 "カサブランカ"
+ STATE_462:0 "マラケシュ"
+ STATE_463:0 "アラスカ"
+ STATE_464:0 "ノバスコシア"
+ STATE_465:0 "ニューブランズウィック"
+ STATE_466:0 "ケベック"
+ STATE_467:0 "マニトバ"
+ STATE_468:0 "セント・ローレンス"
+ STATE_469:0 "サスカチュワン"
+ STATE_470:0 "アルバータ"
+ STATE_471:0 "カナダ北西部"
+ STATE_472:0 "カナダ北部"
+ STATE_473:0 "ブリティッシュコロンビア"
+ STATE_474:0 "ユカタン"
+ STATE_475:0 "チアパス"
+ STATE_476:0 "オアハカ"
+ STATE_477:0 "ベラクルス"
+ STATE_478:0 "ハリスコ"
+ STATE_479:0 "タマウリパス"
+ STATE_480:0 "コアウリア"
+ STATE_481:0 "ドゥランゴ"
+ STATE_482:0 "チワワ"
+ STATE_483:0 "ソノラ"
+ STATE_484:0 "バハ・カリフォルニア"
+ STATE_485:0 "ゲレロ"
+ STATE_486:0 "メタ"
+ STATE_487:0 "サンタクルス"
+ STATE_488:0 "ボリバル"
+ STATE_489:0 "スリア"
+ STATE_490:0 "パスタサ"
+ STATE_491:0 "ロレト"
+ STATE_492:0 "アレキパ"
+ STATE_493:0 "ラ・リベルタ"
+ STATE_494:0 "ウカヤリ"
+ STATE_495:0 "アマゾナス"
+ STATE_496:0 "ミナスジェライス"
+ STATE_497:0 "マラニョン"
+ STATE_498:0 "リオグランデ・ド・ノルテ"
+ STATE_499:0 "バイーア"
+ STATE_500:0 "リオデジャネイロ"
+ STATE_501:0 "サンパウロ"
+ STATE_502:0 "リオグランデ・ド・スル"
+ STATE_503:0 "サンタ・カタリーナ"
+ STATE_504:0 "イグアス"
+ STATE_505:0 "ゴイアス"
+ STATE_506:0 "アントファガスタ"
+ STATE_507:0 "マガリャーネス"
+ STATE_508:0 "トゥクマン"
+ STATE_509:0 "南方チャコ"
+ STATE_510:0 "メソポタミア"
+ STATE_511:0 "メンドーサ"
+ STATE_512:0 "パタゴニア"
+ STATE_513:0 "トレムセン"
+ STATE_514:0 "アルジェリア砂漠"
+ STATE_515:0 "サハラ砂漠南部"
  STATE_516:0 "タイミル・ドルガン＝ネネツ"
+ STATE_517:0 "ビクトリア"
+ STATE_518:0 "タスマニア"
+ STATE_519:0 "南オーストラリア"
+ STATE_520:0 "ノーザンテリトリー"
+ STATE_521:0 "クイーンズランド"
+ STATE_522:0 "オーストラリア西部"
+ STATE_523:0 "パプア"
  STATE_524:0 "澎湖"
  STATE_525:0 "京城"
+ STATE_526:0 "沖縄"
  STATE_527:0 "平壌"
  STATE_528:0 "長崎"
  STATE_529:0 "廣島"
@@ -188,77 +535,275 @@
  STATE_534:0 "新潟"
  STATE_535:0 "金澤"
  STATE_536:0 "道央"
+ STATE_537:0 "南樺太"
+ STATE_538:0 "中部コンゴ"
+ STATE_539:0 "ガボン"
+ STATE_540:0 "南アンゴラ"
+ STATE_541:0 "南西アフリカ"
+ STATE_542:0 "ベチュアナランド"
+ STATE_543:0 "マダガスカル"
+ STATE_544:0 "モザンビーク"
+ STATE_545:0 "ローデシア"
+ STATE_546:0 "タンガニーカ"
+ STATE_547:0 "ケニア"
+ STATE_548:0 "ウガンダ"
+ STATE_549:0 "スーダン"
+ STATE_550:0 "エリトリア"
+ STATE_551:0 "ハルツーム"
+ STATE_552:0 "西部砂漠"
+ STATE_553:0 "レバノン"
+ STATE_554:0 "ダマスカス"
+ STATE_555:0 "千島列島"
+ STATE_556:0 "マリ"
+ STATE_557:0 "モーリタニア"
+ STATE_558:0 "ナイジェリア"
+ STATE_559:0 "ソマリランド"
  STATE_560:0 "コムソモリスク・ナ・アムーレ"
+ STATE_561:0 "アムール"
  STATE_562:0 "アヤノ＝マイスキー"
  STATE_563:0 "ザバイカリエ"
  STATE_564:0 "ブリヤート"
  STATE_565:0 "ウスチ＝ウルキマ"
  STATE_566:0 "ミールヌイ"
  STATE_567:0 "ヴェルフネヴィリュイスク"
+ STATE_568:0 "クラスノヤルスク"
+ STATE_569:0 "ケメロヴォ"
+ STATE_570:0 "ノヴォシビルスク"
+ STATE_571:0 "オムスク"
  STATE_572:0 "クルガン"
  STATE_573:0 "ペルヴォウラルスク"
  STATE_574:0 "ニュルバ"
  STATE_575:0 "イルクーツク"
  STATE_576:0 "エヴェンキ"
  STATE_577:0 "ピチ＝ヤフ"
+ STATE_578:0 "トムスク"
  STATE_579:0 "ヤマロ・ネネツ"
  STATE_580:0 "ハンティ・マンシ"
  STATE_581:0 "コルグエフ島"
  STATE_582:0 "ステルリタマク"
  STATE_583:0 "アルカルイク"
+ STATE_584:0 "アシハバード"
+ STATE_585:0 "ウルゲンチ"
  STATE_586:0 "アルマトイ"
  STATE_587:0 "南部ウスチュルト"
  STATE_588:0 "パブロダール"
  STATE_589:0 "東カザフスタン"
  STATE_590:0 "北カザフスタン"
+ STATE_591:0 "海南"
  STATE_592:0 "茂名"
  STATE_593:0 "広東"
  STATE_594:0 "崇左"
+ STATE_595:0 "福建"
+ STATE_596:0 "浙江"
+ STATE_597:0 "山東"
+ STATE_598:0 "江蘇"
  STATE_599:0 "広西"
+ STATE_600:0 "江西"
  STATE_601:0 "チャムド"
+ STATE_602:0 "湖南"
  STATE_603:0 "黔東南"
+ STATE_604:0 "青海"
+ STATE_605:0 "四川"
+ STATE_606:0 "安徽"
+ STATE_607:0 "河南"
  STATE_608:0 "運城"
+ STATE_609:0 "東河北"
+ STATE_610:0 "熱河"
  STATE_611:0 "ウランチャブ"
  STATE_612:0 "シリンゴル"
  STATE_613:0 "南京"
+ STATE_614:0 "河北"
+ STATE_615:0 "山西"
+ STATE_616:0 "寧夏"
  STATE_617:0 "アクス"
  STATE_618:0 "アルタイ"
  STATE_619:0 "クズルス・キルギス"
+ STATE_620:0 "湖北"
  STATE_621:0 "内モンゴル"
  STATE_622:0 "延安"
+ STATE_623:0 "ルソン"
+ STATE_624:0 "セントラル諸島"
+ STATE_625:0 "サマール"
+ STATE_626:0 "パラワン"
+ STATE_627:0 "ミンダナオ"
+ STATE_628:0 "セブ"
  STATE_629:0 "布哇諸島"
+ STATE_630:0 "ジョンストン環礁"
  STATE_631:0 "水無月島"
  STATE_632:0 "大鳥島"
+ STATE_633:0 "マーシャル諸島"
+ STATE_634:0 "ソロモン諸島"
+ STATE_635:0 "ニューカレドニア"
+ STATE_636:0 "フィジー"
+ STATE_637:0 "カムチャツカ"
  STATE_638:0 "大宮島"
+ STATE_639:0 "ギルバート諸島"
  STATE_640:0 "ザガイン"
+ STATE_641:0 "タヒチ"
+ STATE_642:0 "フェニックス島"
+ STATE_643:0 "エリス諸島"
  STATE_644:0 "サハ"
+ STATE_645:0 "硫黄島"
  STATE_646:0 "彩帆島"
  STATE_647:0 "帛琉諸島"
  STATE_648:0 "南鳥島"
+ STATE_649:0 "ガラパゴス諸島"
  STATE_650:0 "熱田島"
+ STATE_651:0 "ウファ"
  STATE_652:0 "オレンブルク"
+ STATE_653:0 "スヴェルドロフスク"
  STATE_654:0 "ゴルノ・アルタイ"
  STATE_655:0 "北樺太"
+ STATE_656:0 "クウェート"
  STATE_657:0 "浦潮斯徳"
+ STATE_658:0 "アブダビ"
+ STATE_659:0 "アデン"
+ STATE_660:0 "赤道アフリカ"
+ STATE_661:0 "トリポリタニア"
+ STATE_662:0 "スルト"
+ STATE_663:0 "キレナイカ"
+ STATE_664:0 "スロヴァキア南部"
+ STATE_665:0 "ガベス"
+ STATE_666:0 "ラップランド"
+ STATE_667:0 "小スンダ列島"
+ STATE_668:0 "モルッカ諸島"
+ STATE_669:0 "西パプア"
+ STATE_670:0 "ラオス"
  STATE_671:0 "北中部"
+ STATE_672:0 "スマトラ"
+ STATE_673:0 "スラウェシ"
+ STATE_674:0 "中央オーストラリア"
+ STATE_675:0 "アル・ハジャラ"
+ STATE_676:0 "モースル"
+ STATE_677:0 "アレッポ"
+ STATE_678:0 "ルブアルハリ"
+ STATE_679:0 "ヒジャーズ"
+ STATE_680:0 "デリゾール"
+ STATE_681:0 "ケープ"
+ STATE_682:0 "オンタリオ北部"
+ STATE_683:0 "カナダ北東部"
+ STATE_684:0 "カロリン諸島"
+ STATE_685:0 "パナマ運河"
+ STATE_686:0 "プエルトリコ"
+ STATE_687:0 "イギリス領ガイアナ"
+ STATE_688:0 "北方チャコ"
+ STATE_689:0 "ジャマイカ"
+ STATE_690:0 "バハマ北部"
+ STATE_691:0 "トリニダード"
+ STATE_692:0 "ウィンドワード諸島"
+ STATE_693:0 "バハマ南部"
+ STATE_694:0 "フランス領アンティル"
+ STATE_695:0 "キュラソー"
+ STATE_696:0 "バミューダ"
+ STATE_697:0 "マデイラ"
+ STATE_698:0 "アゾレス"
+ STATE_699:0 "リオ・デ・オロ"
+ STATE_700:0 "シエラレオネ"
+ STATE_701:0 "ガンビア"
+ STATE_702:0 "カーボベルデ"
+ STATE_703:0 "アセンション"
+ STATE_704:0 "セントヘレナ"
+ STATE_705:0 "サントメ"
+ STATE_706:0 "レユニオン"
+ STATE_707:0 "モーリシャス"
+ STATE_708:0 "コモロ諸島"
+ STATE_709:0 "セーシェル"
+ STATE_710:0 "ディエゴ・ガルシア"
+ STATE_711:0 "クリスマス島"
+ STATE_712:0 "ココス諸島"
+ STATE_713:0 "ケルゲレン"
+ STATE_714:0 "黒竜江"
  STATE_715:0 "遼北"
  STATE_716:0 "遼寧"
+ STATE_717:0 "松江"
+ STATE_718:0 "スタンリーヴィル"
+ STATE_719:0 "ナタール"
+ STATE_720:0 "サウスジョージア"
+ STATE_721:0 "ポルトガル領ティモール"
  STATE_722:0 "ペチェンガ"
+ STATE_723:0 "南島"
  STATE_724:0 "タイ南部"
+ STATE_725:0 "ナウル"
+ STATE_726:0 "サモア"
+ STATE_727:0 "ライン諸島"
+ STATE_728:0 "広州湾"
+ STATE_729:0 "マカオ"
+ STATE_730:0 "サンピエール島・ミクロン島"
  STATE_731:0 "西マケドニア"
+ STATE_732:0 "パミール"
+ STATE_733:0 "アンダマン"
+ STATE_734:0 "ネンド"
  STATE_735:0 "サヴォワ"
+ STATE_736:0 "イストリア"
+ STATE_737:0 "ビスマルク"
+ STATE_738:0 "アルー諸島"
+ STATE_739:0 "ハイダグアイ"
+ STATE_740:0 "バンクーバー島"
  STATE_741:0 "カンボジア西部"
+ STATE_742:0 "スタリナバード"
+ STATE_743:0 "青島"
+ STATE_744:0 "西安"
+ STATE_745:0 "大連"
+ STATE_746:0 "オルドス"
+ STATE_747:0 "大理"
  STATE_748:0 "畢節"
+ STATE_749:0 "黄山"
+ STATE_750:0 "常徳"
+ STATE_751:0 "涼山"
  STATE_752:0 "カンゼ"
+ STATE_753:0 "甘南"
+ STATE_754:0 "ゴロク"
+ STATE_755:0 "海西"
+ STATE_756:0 "酒泉"
+ STATE_757:0 "シガツェ"
+ STATE_758:0 "ガリ"
  STATE_759:0 "バインゴリン・モンゴル"
  STATE_760:0 "クムル"
  STATE_761:0 "興安東"
+ STATE_762:0 "カトヴィツェ"
+ STATE_763:0 "ケーニヒスベルク"
+ STATE_764:0 "西バナト"
+ STATE_765:0 "カタール"
  STATE_766:0 "ブジャク"
+ STATE_767:0 "北ダルフール"
+ STATE_768:0 "ルワンダ"
+ STATE_769:0 "ブルンジ"
+ STATE_770:0 "マラウイ"
+ STATE_771:0 "ザンビア"
+ STATE_772:0 "中央コンゴ"
+ STATE_773:0 "カメルーン"
+ STATE_774:0 "チャド"
+ STATE_775:0 "ボルク・エネディ・ティベスティ"
+ STATE_776:0 "ダホメ"
  STATE_777:0 "東トーゴ"
+ STATE_778:0 "オートボルタ"
+ STATE_779:0 "象牙海岸"
+ STATE_780:0 "ギニア"
+ STATE_781:0 "ニジェール"
+ STATE_782:0 "トンブクトゥ"
+ STATE_783:0 "シディ・イフニー"
  STATE_784:0 "ズーキヤ"
+ STATE_785:0 "ピカルディ"
+ STATE_786:0 "モーリタニア砂漠"
  STATE_787:0 "ギルギット・バルティスタン"
+ STATE_788:0 "サラマンカ"
+ STATE_789:0 "コルドバ"
+ STATE_790:0 "アストゥリアス"
+ STATE_791:0 "バリャドリド"
+ STATE_792:0 "パイス・バスコ"
+ STATE_793:0 "グアダラハラ"
+ STATE_794:0 "アラゴン東部"
+ STATE_795:0 "サンタレン"
+ STATE_796:0 "北アンゴラ"
  STATE_797:0 "イスタンブール"
+ STATE_798:0 "アマスィヤ"
  STATE_799:0 "北ドブルジャ"
+ STATE_800:0 "ヴァン"
+ STATE_801:0 "モエシア"
+ STATE_802:0 "コソボ"
+ STATE_803:0 "セルビア南部"
+ STATE_804:0 "ヘルツェゴビナ"
+ STATE_805:0 "エピルス北部"
  STATE_806:0 "アルプ＝マリティーム"
  STATE_807:0 "名古屋"
  STATE_808:0 "青森"
