ローカライゼーションファイルの整理

--- a/localisation/_geacps_ideologies_l_english.yml
+++ b/localisation/_geacps_ideologies_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
-#イデオロギー
+#Ideologies
  total_socialism:0 "全体的社会主義"
  total_socialism_noun:0 "全体的社会主義"
  total_socialism_desc:0 "全体主義政権"
@@ -31,4 +31,27 @@
  national_populism_noun:0 "国家大衆主義"
  national_populism_desc:0 "全体主義政権"
  
-#サブイデオロギー
+#Sub-Ideologies
+ 
+#Ideology Modifiers
+ total_socialism_drift:0 "日毎の全体的社会主義への支援"
+ radical_socialism_drift:0 "日毎の急進的社会主義への支援"
+ social_democracy_drift:0 "日毎の社会民主主義への支援"
+ social_liberalism_drift:0 "日毎の社会自由主義への支援"
+ classical_liberalism_drift:0 "日毎の古典的自由主義への支援"
+ liberal_conservatism_drift:0 "日毎の自由保守主義への支援"
+ social_conservatism_drift:0 "日毎の社会保守主義への支援"
+ authoritative_democracy_drift:0 "日毎の権威的民主主義への支援"
+ reactionary_authoritarianism_drift:0 "日毎の反動的権威主義への支援"
+ national_populism_drift:0 "日毎の国家大衆主義への支援"
+ 
+ total_socialism_acceptance:0 "全体的社会主義者との外交の容認"
+ radical_socialism_acceptance:0 "急進的社会主義者との外交の容認"
+ social_democracy_acceptance:0 "社会民主主義者との外交の容認"
+ social_liberalism_acceptance:0 "社会自由主義者との外交の容認"
+ classical_liberalism_acceptance:0 "古典的自由主義者との外交の容認"
+ liberal_conservatism_acceptance:0 "自由保守主義者との外交の容認"
+ social_conservatism_acceptance:0 "社会保守主義者との外交の容認"
+ authoritative_democracy_acceptance:0 "権威的民主主義者との外交の容認"
+ reactionary_authoritarianism_acceptance:0 "反動的権威主義者との外交の容認"
+ national_populism_acceptance:0 "国家大衆主義者との外交の容認"
