--- a/localisation/replace/_geacps_core_l_english.yml
+++ b/localisation/replace/_geacps_core_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+#ローディング
  LOADING_GUI:0 "製作中……"
  LOADING_HISTORY:0 "製作中……"
  LOADING_DATABASES:0 "製作中……"
@@ -26,8 +27,30 @@
  INIT_GAMESTATE:0 "製作中……"
  FE_LOADING_HISTORY:0 "製作中……"
  
+#メニュー
  MENU_HOMEPAGE:0 "Greater East Asia Co-Prosperity Sphere Wiki"
  MENU_FORUM:0 "Greater East Asia Co-Prosperity Sphere IV Discord"
  MENU_FACEBOOK:0 "Greater East Asia Co-Prosperity Sphere Facebook"
  MENU_TWITTER:0 "Greater East Asia Co-Prosperity Sphere Twitter"
  MENU_PRIVACY_POLICY:0 "プライバシーポリシー"
+ 
+#カスタムゲームルール
+ FE_DIFFICULTY_CUSTOM:1 "カスタムゲームルールを設定する。 "
+ FE_DIFFICULTY_CUSTOM_BTN:1 "カスタムゲームルール"
+ FE_DIFFICULTY:0 "階級"
+ FE_DIFFICULTY_VERY_EASY:0 "国民義勇隊"
+ FE_DIFFICULTY_VERY_EASY_TOOLTIP:0 "§L「ぜいたくは敵だ！」§!"
+ FE_DIFFICULTY_EASY:1 "二等兵"
+ FE_DIFFICULTY_EASY_TOOLTIP:0 "§L「欲しがりません。勝つまでは」§!"
+ FE_DIFFICULTY_NORMAL:1 "一等兵"
+ FE_DIFFICULTY_NORMAL_TOOLTIP:0 "§L「足らぬ足らぬは工夫が足らぬ」§!"
+ FE_DIFFICULTY_HARD:1 "大将"
+ FE_DIFFICULTY_HARD_TOOLTIP:1 "§L「遂げよ聖戦、興せよ東亜」§!"
+ FE_DIFFICULTY_VERY_HARD:0 "元帥"
+ FE_DIFFICULTY_VERY_HARD_TOOLTIP:1 "§L「すべてを戦争へ」§!"
+ 
+#デバッグメニュー
+ geacps_debug_menu_title_text:0 "デバッグメニュー"
+ geacps_debug_menu_unused:0 "特になし"
+ geacps_debug_menu_world_event:0 "世界的事件"
+ geacps_debug_menu_tab_country_event_text:0 "国家的事件"
