--- a/localisation/_geacps_political_tab_l_english.yml
+++ b/localisation/_geacps_political_tab_l_english.yml
@@ -12,3 +12,15 @@
  mobilization_laws:0 "徴兵法"
  company_category:0 "企業"
  military_category:0 "軍部"
+
+#政治体制
+ anarchy:0 "無政府"
+ confederation_state:0 "連合国家"
+ unitary_state:0 "単一国家"
+ federation_state:0 "連邦国家"
+
+#社会体制
+ 
+#統治体制
+ monarchy:0 "君主制"
+ republic:0 "共和制"
