--- a/localisation/Temporary/geacps_JAP_l_english.yml
+++ b/localisation/Temporary/geacps_JAP_l_english.yml
@@ -2,21 +2,21 @@
 #国家方針
  JAP_1-22_Incident:0 "一・二二事件"
  JAP_Opening_of_the_extraordinary_session:0 "臨時会の開会"
- JAP_Declaration_of_martial_law:0 "戒嚴の宣告"
+ JAP_Declaration_of_martial_law:0 "戒厳の宣告"
+ JAP_Election_of_Prime_Minister:0 "首相の選出"
+ JAP_Draft_Constitution:0 "憲法草案"
+ JAP_Draft_budget:0 "予算案"
  JAP_Re-exclusion_of_imperialists:0 "皇道派を再排除"
  JAP_Agrarian_watchdog:0 "農本主義者の監視"
  JAP_Naval_officer_s_purge:0 "海軍士官の粛軍"
  JAP_Stability_of_the_situation:0 "事態の安定"
- JAP_Election_of_Prime_Minister:0 "首相の選出"
- JAP_Draft_Constitution:0 "憲法草案"
- JAP_Draft_budget:0 "予算案"
  JAP_Economy:0 "経済"
- JAP_Supporting_local_industrial_news_federations:0 "各地の産業報国連盟を支援"
  JAP_Military:0 "軍事"
  JAP_Question_of_interference_with_the_General_Staff:0 "統帥権干渉問題"
  JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
  JAP_Fumimaro_Konoe:0 "近衛文麿"
  JAP_Kuniaki_Koiso:0 "小磯國昭"
+ JAP_Dai_Nippon_Sangyo_Hoho_Diet:0 "大日本産業報国会"
  JAP_Yokosuka_Naval_Arsenal:0 "横須賀海軍工廠"
  JAP_Kure_Naval_Arsenal:0 "呉海軍工廠"
  JAP_Maizuru_Naval_Factory:0 "舞鶴海軍工廠"
@@ -25,8 +25,107 @@
  JAP_Tang_Rong_Artillery_Factory:0 "唐栄砲兵工廠"
  JAP_Pyongyang_Weapons_Factory:0 "平壌兵器製造所"
  JAP_Army_Aviation_Factory:0 "陸軍航空工廠"
- 
-#国家方針
+ JAP_Oni_no_Kantaro:0 "鬼の貫太郎"
+ JAP_Five_Reform_Directives:0 "五大改革指令"
+ JAP_The_Three_Arrows:0 "三本の矢"
+ JAP_Suzuki_Nomics:0 "鈴木ノミクス"
+ JAP_The_Transformation_of_the_Japanese_Archipelago:0 "日本列島改造論"
+ JAP_Suzuki_and_Anan:0 "鈴木と阿南"
+ JAP_Civilian_System:0 "文民統制"
+ JAP_Breakwaters_of_the_Pacific:0 "太平洋の防波堤"
+ JAP_Eternal_peace:0 "永遠の平和"
+ JAP_First_California-Japanese_Treaty:0 "第一次日加条約"
+ JAP_Second_California-Japanese_Treaty:0 "第二次日加条約"
+ JAP_Third_California-Japanese_Treaty:0 "第三次日加条約"
+ JAP_Treaty_on_the_Annexation_of_California:0 "加利福尼亜併合ニ関スル条約"
+ JAP_Suzuki_Diplomacy:0 "鈴木外交"
+ JAP_Togo-Bevin_Agreement:0 "東郷・ベヴィン協定"
+ JAP_Japanese-British_Contract_Naval_Committee:0 "日英合同海軍委員会"
+ JAP_Japanese-English_Contract_Naval_Technology_Institute:0 "日英合同海軍技術研究所"
+ JAP_The_Fourth_Japanese-British_Alliancet:0 "第四次日英同盟"
+ JAP_Confronting_the_hegemony_of_the_American_people:0 "米國國民の覇権主義に対峙"
+ JAP_Demand_for_compensation:0 "賠償金を要求"
+ JAP_NB_Surrounding_Network:0 "NB包囲網"
+ JAP_Lord_Duke:0 "公爵閣下"
+ JAP_New_institutional_movement:0 "新体制運動"
+ JAP_Appointment_of_innovative_bureaucrats:0 "革新官僚の任命"
+ JAP_Establishment_of_a_new_economic_system:0 "経済新体制確立"
+ JAP_New_Order_of_East_Asia:0 "東亜新秩序"
+ JAP_Cooperation_with_control_groups:0 "統制派との連携"
+ JAP_Abolition_of_the_system_of_military_ministers_on_active_service:0 "軍部大臣現役武官制の撤廃"
+ JAP_Formation_of_the_Koaha:0 "興亜派の結成"
+ JAP_The_rise_of_Koaha:0 "興亜派の台頭"
+ JAP_New_regime_movement_in_the_outer_regions:0 "外地の新体制運動"
+ JAP_Support_for_the_Malayan_Volunteer_Force:0 "マレー義勇軍の支援"
+ JAP_Support_for_the_Borneo_Volunteer_Force:0 "ボルネオ義勇軍の支援"
+ JAP_Support_for_the_Burmese_National_Army:0 "ビルマ国民軍の支援"
+ JAP_No_Anglo-American_pacifism:0 "英米本位の平和主義を排す"
+ JAP_Organisation_of_the_Eastern_Conference:0 "東方会議の開催"
+ JAP_Shigemitsu-Alvarez_Agreement:0 "重光・アルバレス協定"
+ JAP_Japan-Spain_Alliance:0 "日西同盟"
+ JAP_The_New_One_Nation_Movement:0 "一国新体制運動論"
+ JAP_Korean_Tiger:0 "朝鮮の虎"
+ JAP_Nae_Seon_Il_Che:0 "内鮮一体"
+ JAP_Conservative_bureaucratic_appointments:0 "保守官僚の任命"
+ JAP_Gasoline_vehicles:0 "ガソリン自動車"
+ JAP_Japan-Manchuria-Shina_Economic_Bloc:0 "日満支経済ブロック"
+ JAP_Koiso_and_Yonai:0 "小磯と米内"
+ JAP_Establishment_of_the_Supreme_War_Guidance_Council:0 "最高戦争指導会議の設置"
+ JAP_Let_s_keep_the_military_in_check:0 "軍部を抑えよう"
+ JAP_Establishment_of_the_Chief_of_the_Supreme_Command:0 "最高幕僚長の設置"
+ JAP_Miao_Pin_route:0 "援繆ルート"
+ JAP_The_Koiso-Miao_Pin_Agreement:0 "小磯・繆斌協定"
+ JAP_Opposite_shore_management:0 "対岸経営"
+ JAP_Expanding_influence_on_Fujian:0 "福建への影響力拡大"
+ JAP_Koiso_Diplomacy:0 "小磯外交"
+ JAP_Supporting_Indonesia's_independence:0 "インドネシア独立を支援"
+ JAP_The_territories_of_Malaya_Sumatra_Java_Borneo_and_Celebes_are_hereby_declared_to_be_territories_of_the_Empire_and_as_important_sources_of_natural_resources_and_every_effort_shall_be_made_to_develop_them_and_to_ascertain_the_feelings_of_the_people:0 "「マライ」、「スマトラ」、「ジャワ」、「ボルネオ」、「セレベス」ハ帝国領土ト決定シ重要資源ノ供給源トシテ極力之ガ開発竝ニ民心ノ把握ニ努ム"
+ GEACPS_NF_JAP_55:0 ""
+ GEACPS_NF_JAP_56:0 ""
+ GEACPS_NF_JAP_57:0 ""
+ GEACPS_NF_JAP_58:0 ""
+ GEACPS_NF_JAP_59:0 ""
+ GEACPS_NF_JAP_60:0 ""
+ GEACPS_NF_JAP_61:0 ""
+ GEACPS_NF_JAP_62:0 ""
+ GEACPS_NF_JAP_63:0 ""
+ GEACPS_NF_JAP_64:0 ""
+ GEACPS_NF_JAP_65:0 ""
+ GEACPS_NF_JAP_66:0 ""
+ GEACPS_NF_JAP_67:0 ""
+ GEACPS_NF_JAP_68:0 ""
+ GEACPS_NF_JAP_69:0 ""
+ GEACPS_NF_JAP_70:0 ""
+ GEACPS_NF_JAP_71:0 ""
+ GEACPS_NF_JAP_72:0 ""
+ GEACPS_NF_JAP_73:0 ""
+ GEACPS_NF_JAP_74:0 ""
+ GEACPS_NF_JAP_75:0 ""
+ GEACPS_NF_JAP_76:0 ""
+ GEACPS_NF_JAP_77:0 ""
+ GEACPS_NF_JAP_78:0 ""
+ GEACPS_NF_JAP_79:0 ""
+ GEACPS_NF_JAP_80:0 ""
+ GEACPS_NF_JAP_81:0 ""
+ GEACPS_NF_JAP_82:0 ""
+ GEACPS_NF_JAP_83:0 ""
+ GEACPS_NF_JAP_84:0 ""
+ GEACPS_NF_JAP_85:0 ""
+ GEACPS_NF_JAP_86:0 ""
+ GEACPS_NF_JAP_87:0 ""
+ GEACPS_NF_JAP_88:0 ""
+ GEACPS_NF_JAP_89:0 ""
+ GEACPS_NF_JAP_80:0 ""
+ GEACPS_NF_JAP_91:0 ""
+ GEACPS_NF_JAP_92:0 ""
+ GEACPS_NF_JAP_93:0 ""
+ GEACPS_NF_JAP_94:0 ""
+ GEACPS_NF_JAP_95:0 ""
+ GEACPS_NF_JAP_96:0 ""
+ GEACPS_NF_JAP_97:0 ""
+ GEACPS_NF_JAP_98:0 ""
+ GEACPS_NF_JAP_99:0 ""
+ GEACPS_NF_JAP_100:0 ""
  GEACPS_NF_JAP_army_00:0 "軍部の統一"
  GEACPS_NF_JAP_navy_01:0 "これからの帝国海軍に向き合う"
  GEACPS_NF_JAP_navy_capital_ship:0 "主力艦の整備"
@@ -84,7 +183,6 @@
  GEACPS_NF_JAP_navy_19:0 ""
  
 #国民精神
- JAP_Martial_law:0 "戒嚴令"
  JAP_high_defence_state_system:0 "高度国防国家体制"
  JAP_planning_institute:0 "企画院"
  JAP_active_military_service_for_ministers_of_war:0 "軍部大臣現役武官制"
@@ -95,25 +193,14 @@
  
 #首長
  JAP_Hideki_Tojo:0 "東條英機"
- JAP_Kisaburo_Ando:0 "安藤紀三郎"#臨時代理
- JAP_Mamoru_Shigemitsu:0 "重光葵"#臨時代理
  
 #イベント
  geacps_JAP.1.t:0 "大日本帝國"
- geacps_JAP.1.d:0 "大日本帝国は先のアメリカ合衆国との戦争に勝利した。 戦前, 日本と米国と深い関係を持ち両国に挟まれた「ハワイ王国」は長年提案し続けていた日本との連邦化を達成した。\n西方では未だ戦いは続いているが北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し, 南方では米英仏蘭植民地へ様々な形で影響拡大に成功した。\n極東…すなわち日昇る場所に位置する島国は近代化し始めて100年経たずして大国となった。我々はこの太陽を沈めることなく繁栄させねばならない。 天皇陛下万歳！大日本帝国万歳！"
+ geacps_JAP.1.d:0 "A"
  geacps_JAP.1.a:0 "天皇陛下万歳！"
- geacps_JAP.2.t:0 "一・二二事件の発生"
- geacps_JAP.2.d:0 "昭和21年1月22日、陸軍青年将校らと一部の農本主義思想家、海軍の青年将校たちが帝都にてクーデターを起こし、銃撃された東条首相は重体になられた..."
- geacps_JAP.2.a:0 "叛乱軍を捕らえよ！"
- geacps_JAP.3.t:0 "臨時代理"
- geacps_JAP.3.d:0 "一・二二事件と未だ続く志那事変の対処の為にも直ぐに臨時代理を決める必要がある。\n臨時代理としては、内務大臣である安藤紀三郎と外務大臣である重光葵の二人がいる。"
- geacps_JAP.3.a:0 "東條の腹心・分身の安藤紀三郎に"
- geacps_JAP.3.b:0 ""欠点がない"重光葵に"
- geacps_JAP.4.t:0 "日本内戦の予感"
- geacps_JAP.4.d:0 "A"
- geacps_JAP.4.a:0 "A"
- geacps_JAP.4.b:0 "B"
- geacps_JAP.4.c:0 "C"
+ geacps_JAP.2.t:0 "一・二二事件"
+ geacps_JAP.2.d:0 "A"
+ geacps_JAP.2.a:0 "首謀者を逮捕しろ！"
  geacps_JAP.001.title:0 "海軍を主導する人材の選定"
  geacps_JAP.001.desc:0 "太平洋戦争では今までの戦争とは打って変わった戦法も重要であることが分かった。これらのことを踏まえ、我々はこれからの時代の帝国艦隊を率いていく人材を選定する必要がある。これは国家の存亡にかかわる重大な事案であり、慎重に考えなければならない・・・"
  geacps_JAP.001.a:0 "航空主兵主義者を据え置く"
@@ -131,9 +218,7 @@
  
 #ディシジョン
  JAP_1-22_Incident:0 "一・二二事件"
- JAP_1-22_Incident_desc:0 "憲兵によると、我が国における反政府運動が激化しようとしているらしい。\n具体的にどのような人物、もしくは組織が裏に潜んでいるかという事は掴めてはいないものの、帝都の襲撃又は占拠等の後、政府首脳・重臣への襲撃を計画しているらしい。\nこの馬鹿馬鹿しい計画に対し、どの様に行動すべきだろうか？"
- Outbreak_of_the_1-22_Incident:0 "一・二二事件の発生"
- Outbreak_of_the_1-22_Incident_desc:0 "一・二二事件の発生"
+ JAP_Outbreak_of_the_1-22_Incident:0 "一・二二事件の発生"
  JAP_national_policy_research_outline:0 "国策研究大綱"
  JAP_national_policy_research_outline_desc:0 "研究こそすべて！\n頑張ろう\nこのディシジョンは4年ごとに選択可能です"
  national_policy_research_outline:0 "[GetYear]年国策研究大綱"
