--- a/localisation/geacps_CHI_l_english.yml
+++ b/localisation/geacps_CHI_l_english.yml
@@ -2,45 +2,20 @@
 #国家方針
 
 #国民精神
- GEACPS_idea_CHI_uneasy_unity:0 "不穏な結束"
- GEACPS_idea_CHI_uneasy_unity_desc:0 "-中華統一戦線-聞こえはいいが実際のところ崩壊する運命が定まっているも同然である。"
- GEACPS_idea_CHI_suppression_of_rebellion:0 "反乱の抑圧"
- GEACPS_idea_CHI_suppression_of_rebellion_desc:0 ""
- GEACPS_idea_CHI_pressure_from_allies:0 "同盟国からの圧力"
- GEACPS_idea_CHI_pressure_from_allies_desc:0 ""
- GEACPS_idea_CHI_incompetent_government:0 "無能な政府"
- GEACPS_idea_CHI_incompetent_government_desc:0 ""
- GEACPS_idea_CHI_chinese_united_front:0 "中華統一戦線"
- GEACPS_idea_CHI_chinese_united_front_desc:0 ""
- GEACPS_idea_CHI_chinese_united_front1:0 "中華統一戦線"
- GEACPS_idea_CHI_chinese_united_front1_desc:0 ""
- GEACPS_idea_CHI_chinese_united_front2:0 "中華統一戦線"
- GEACPS_idea_CHI_chinese_united_front2_desc:0 ""
- GEACPS_idea_CHI_chinese_united_front3:0 "中華統一戦線"
- GEACPS_idea_CHI_chinese_united_front3_desc:0 ""
- GEACPS_idea_CHI_chinese_united_front4:0 "中華統一戦線"
- GEACPS_idea_CHI_chinese_united_front4_desc:0 ""
-
- GEACPS_idea_CHI_first_of_all_unity:0 "ひとまずの団結"
- GEACPS_idea_CHI_first_of_all_unity_desc:0 ""
- GEACPS_idea_CHI_the_only_one_china:0 "ただ一つの中華"
- GEACPS_idea_CHI_the_only_one_china_desc:0 ""
- GEACPS_idea_CHI_failed_states:0 "失敗国家"
- GEACPS_idea_CHI_failed_states_desc:0 ""
-
- GEACPS_idea_CHI_phoenix:0 "不死鳥"
- GEACPS_idea_CHI_phoenix_desc:0 ""
- GEACPS_idea_CHI_counterattack:0 "反撃の狼煙"
- GEACPS_idea_CHI_counterattack_desc:0 ""
- GEACPS_idea_CHI_road_to_reunification1:0 "再統一への道"
- GEACPS_idea_CHI_road_to_reunification1_desc:0 ""
- GEACPS_idea_CHI_road_to_reunification2:0 "再統一への道"
- GEACPS_idea_CHI_road_to_reunification2_desc:0 ""
- GEACPS_idea_CHI_road_to_reunification3:0 "再統一への道"
- GEACPS_idea_CHI_road_to_reunification3_desc:0 ""
- GEACPS_idea_CHI_road_to_reunification4:0 "再統一への道"
- GEACPS_idea_CHI_road_to_reunification4_desc:0 ""
-
+ CHI_war_of_17_years:0 "17年間の戦争"
+ CHI_war_of_17_years_desc:0 "この国はずっと戦い続けている。本当にずっと。"
+ CHI_warloads:0 "軍閥"
+ CHI_warloads_desc:0 "大清帝国の崩壊より、各地を実効支配する軍閥が存在している。彼らを懐柔するか、徹底的に弾圧しなければ我々の声を地方まで届けることはできない。"
+ CHI_northern_expedition:0 "北伐"
+ CHI_northern_expedition_desc:0 "主に共産主義勢力の排除を目的に行われた北伐は未だに終わる気配がない"
+ CHI_lost_democracy:0 "失われた民主主義"
+ CHI_lost_democracy_desc:0 "中華民国は中華で初めての民主主義国家である。少なくとも形式上は。"
+ CHI_changed_capital_once:0 "一度の遷都"
+ CHI_changed_capital_once_desc:0 "この国は首都南京を失った。"
+ CHI_changed_capital_twice:0 "二度の遷都"
+ CHI_changed_capital_twice_desc:0 "この国は南京のみならず武漢も失った。"
+ CHI_small_support_from_USA:0 "米国からのささやかな支援"
+ CHI_small_support_from_USA_desc:0 "米国は我々がこの大陸で覇権を取ることを望み、支援を行っている。いや、正確には行っていた。"
 #イベント
  CHI.001.title:0 "都市疎開の開始"
  CHI.001.desc:0 "日本軍の攻撃が激しさを増し、臨時首都武漢にも空襲が日常的に行われたことを受け、住民の疎開が本格的に行われることとなった。すでに政府高官の家族や軍属は重慶へ避難しているが、一般市民の疎開は未だ行われてこなかったため、武漢の主要道路は避難民で混雑しており、一部では兵站への影響が出ているとの情報も出ている。。"
