--- a/localisation/_geacps_special_event_l_english.yml
+++ b/localisation/_geacps_special_event_l_english.yml
@@ -12,3 +12,11 @@
  special_event_desc_nepal:0 "数多の人種、言語、宗教、そして文化、\n進歩ありし国ネパール万歳！"
  special_event_exit_nepal:0 "§B常に幸福を！"
 
+ special_event_title_EGR_unification:0 "ドイツの統一"
+ special_event_desc_EGR_unification:0 "ドイツ、一つの祖国。\n過去の困難を克服し、意思のままに団結する。"
+ special_event_exit_EGR_unification:0 "もう誰も悲しまない世へ"
+
+special_event_nepal:0 "ネパール国歌"
+special_event_test:0 "なんの変哲もない音声"
+geacps_se_EGR_unification:0 "ドイツ民主共和国国歌"
+ 
